format md in 09

--- a/09.历史文化类/中国命研究.md
+++ b/09.历史文化类/中国命研究.md
@@ -1,4 +1,8 @@
-#《中国命研究》目录
+# 中国命研究
+
+<!-- toc -->
+
+## 目录
 
 * 《中国命研究》自序
 * 一、为中国人信命寻根
@@ -47,8 +51,6 @@
 * 四四、从犀牛看政治
 * 四五、别开“死”面
 
-
-
 《中国命研究》自序
 
 这本《中国命研究》，共收有四十五篇文字，和另一本《中国性研究》一样，有学术性的、也有通俗性的，全部是环绕在中国命定生死等各方面的论述。不管信命也好、不信命也罢，不论哪一方面，它的肇始之点，都和命有关，因此我把它们集合起来，成为此书。
@@ -76,8 +78,6 @@
 自来有关命的研究，本就不易，《汉书-外戚传》说得好：“孔子罕言命，盖难言之。非通幽明之变，恶能识乎性命！”在“幽明之变”上，今我对天地、阴阳、日夜、善恶、贤愚、人鬼等的理解，实已超迈古人。我个人博学多闻、饱更忧患，“识乎性命”，早在孔子之上，现以此书聊示几许，知我者，孔夫子。
 
 1990年3月5日
-
-
 
 为中国人信命寻根
 
@@ -157,8 +157,6 @@
 
 1984年5月2日
 
-
-
 反符瑞
 
 汉朝大思想家王充，在举国一致的符瑞迷信里，曾有这样反对符瑞的话：
@@ -170,8 +168,6 @@
 由于国民党御用文人对王充的厚诬，可以约略看到：国民党怎样在中国大陆以外的地方颠倒黑白、蒙混真知。如今到处又是一片符瑞之象了，到处是张灯结彩、到处是报喜不报忧、到处是吉祥话儿，甚至无知的党外人士办刊物，也学会把蒋经国当选和“黄历上百年难逢的双春双雨水”扯在一起，而“为1984赦天下卜卦”（5月1日《关怀》第三十期）了！这种现代符瑞的迷信的大雾，简直愈来愈浓了！我实在看不过去、看不顺眼，我真要写它几句。我要昭告天下说：“别以为这个岛上都是谄媚的、迷信的人啊！我李敖就不来这一套！我李敖就是例外！千百年后，岛孤人孤之后，总要有个真正的明白人留名下来，那个人，除了李敖，还他妈的有谁呢？”
 
 1984年5月2日
-
-
 
 李鼎彝《宿命正命造命与非命》书后
 
@@ -209,8 +205,6 @@
 
 1984年5月2日
 
-
-
 “有如白水！”
 
 《东周列国志》记晋文公重耳流亡十九年，最后在渡河返国的河边，把跟了他多年的日用器材，下令丢掉。他说：“吾今日入晋为君，玉食一方，要这些残敝之物何用？”这一无情，引起跟他多年的狐偃的不满。狐偃字子犯，是晋文公之舅，也叫咎犯、舅犯，《东周列国志》写这一故事如下：
@@ -234,8 +228,6 @@
 上面这个用归纳法做出的小考证，意在举例说明古书应该怎么读，望文生义的读古书，是会闹笑话的。
 
 1984年8月22日晨四点半
-
-
 
 我看老天爷
 
@@ -496,8 +488,6 @@
 可惜的是，两千年来，由于独尊孔孟的关系，荀子的高明思想，一直被忽略了、冷落了。对“天”的思想。虽然荀子早就为中国人做了高明的导向，虽然这种导向，早就符合近代自然主义对“天”的正确看法，可是两千年下来，所生的影响却很有限。研究中国思想史，写到这儿，真不禁有点悲愤、真不禁有“天道无亲，常与愚人”之叹了！
 
 1983年1月15日
-
-
 
 有眼识泰山
 
@@ -845,8 +835,6 @@
 
 郁离子观于岳词，怅然叹曰：“悲哉！先天之道隐而鬼神亦受人之诬也！而况于人乎？”管豹问曰：“何也？”郁离子曰：“若下闻圣人之言曰曾谓泰山不如林放乎？言泰山不享非礼之祭也。今也又从而为之祠、形其神而配以妃，不亦诬且亵乎？夫人之生死，有天命焉，福善祸淫，天之道也，使诚有鬼司之，犹当奉若帝命，其敢受非礼之祈而淫纵其祸福于其所不当得者乎？而祠以私之，是以浊世之鄙夫待鬼神也，其不敬孰大焉！”
 
-
-
 要生死有关于天下
 
 刘献廷（1648-1695）字继庄，别号广阳子。北京人。王源《刘处士墓表》说：
@@ -886,8 +874,6 @@
 ②刘继庄《广阳杂记》中有这些话：“陈青来执赞于予，问为学之方，予言为学先须开拓其心胸，务令识见广阔，为第一义；次则于古今兴废沿革礼乐兵农之故一一淹贯，心知其事，庶不愧于读书。若夫寻章摘句，一技一能，所谓雕虫之技，壮夫耻为者也。”
 
 ③刘继庄《广阳杂记》中有这些话：“余于甲子初夏在包山沈茂仁家，偶有所见，奋笔书曰：‘眼光要放在极大处，身体要安在极小处。’迄今十年，乃不克践斯言也，甚矣，知之易而行之难也！”这种“眼光要放在极大处，身体要安在极小处”的情况，我在坐牢时最有此感。
-
-
 
 孔融“父母于子无恩论”申义
 
@@ -973,8 +959,6 @@
 
 ⑦钱钟书没有看过琼瑶的《窗外》，我为他补一条。《窗外》页44：“妈，你别这样不满意我，我并没有向你要求这一条生命，你该对创造我负责任，在我，生命中全是痛苦，假如你不满意我，你最好把我这条生命收回去！”
 
-
-
 上吊吊出来的问题
 
 1962年母亲节那天，一个父亲吊死了。
@@ -1011,8 +995,6 @@
 
 从这些故事的对比下，主张复兴中国文化的人，可曾想到你复兴了什么？愿复兴了什么？又能复兴了什么？
 
-
-
 “时日害丧，予及女偕亡！”
 
 《孟子-梁惠王》中有这么一段：
@@ -1028,8 +1010,6 @@
 人生的一大谑画是：你无法选择敌人。有时候，你的敌人就是跟你同“酱”在—个岛上，你无所逃也不屑于逃，日正当中，你只好含笑和他们斗斗斗，虽然两败俱伤，他妈的也没什么鸟紧。
 
 1984年1月2日夜
-
-
 
 老董的悲剧
 
@@ -1103,8 +1083,6 @@
 
 ③《史记》原文是：“太史公曰：余闻董生曰：‘周遭衰废，孔子……是非二百四十二年之中，以为天下仪表，贬天子、退诸侯、讨大夫，以达王事而已矣。……’”这些话，到了《汉书-司马迁传》里，就被窜改为“太史公曰：余闻之董生：‘周道废，孔子为鲁司寇，诸侯害之，大夫壅之。孔子知时之不用、道之下行也，是非二百四十二年之中，以为天下仪表，贬诸侯、讨大夫，以达王事而已矣。’”其中“贬天子”的字眼竟不见了。知识分子与虎谋皮，下场一至于此！
 
-
-
 你才孤寒呢！
 
 “孤寒”在中国语文中，原始的意义是身世寒微。《世说新语-言语》记“陶公疾笃”，注引王隐《晋书》载陶侃临终表说：“臣少长孤寒，始愿有限。过蒙先朝历世异恩，臣年垂八十，位极人臣，启手启足，当复何恨？”（俱见《九家旧晋书辑本》）《晋书-陶侃传》也收了这一临终表，但有异文，内容是：“臣少长孤寒，始愿有限。过蒙圣朝历世殊恩、陛下睿鉴，宠灵弥泰。有始必终，自古而然。臣年垂八十，位极人臣，启手启足，当复何恨！”另在《晋书-陈颢传》中，也有“显以孤寒，数有奏议，朝士多恶之，出除谯郡太守”的话；《旧五代史-冯道传》中，也有“凡孤寒士子，抱才业、素知识”的话，可见“孤寒”一词，在中国语文中是一个用法。
@@ -1120,8 +1098,6 @@
 我曾写“不怕孤立，才有独立”。其实，真正站在真理正道一边的人，他在心灵上并不孤立，在宋仁宗眼中“卿孤立，乃能如是”的人，其实是心灵上的得道多助者，只是道在助他而不一定是人在助他而已。
 
 1988年11月10日
-
-
 
 他真有帝王气象了！
 
@@ -1150,7 +1126,6 @@
 ②《烈皇小识》：“逆闯入官，问帝所在，大索宫中不得。伪尚玺卿黎志陞进曰：‘此必匿民间，非重赏严诛不可得，今日大事，不可忽也。’乃下令：‘献帝者赏万金，封伯爵，匿者夷其族！’至二十二日，庚戌，得先帝遗魄于后苑山亭中，与王承恩对面缢焉，先帝以发覆面，自袷蓝袍，白绸裤，一足铣，一足有绫袜，红方舄，袖中书一行云：‘因失江山，无面目见祖宗于天上，不敢终于正寝！’”王承恩是他的贴身太监，陪他死了。要是现代老K版的王承恩，一定抱住他一起逃亡矣！
 
 ③《明史-庄烈帝本纪》：“（三月）辛卯，李建泰疏请南迁。壬辰，召廷臣于平台，示建泰疏，曰：‘国君死社稷，朕将焉往？’李邦华等复请太子抚军南京，不听。”可见崇祯皇帝连南京都不肯去，何况台湾呀！
-
 
 昏君也会殉国呢！
 
@@ -1198,8 +1173,6 @@
 
 ③《南史-陈本纪》：“城内文武百司皆遁出，唯尚书仆射袁宪、后阁舍人夏侯公韵侍侧。宪劝端坐殿上，正色以待之。后主曰：‘锋刃之下，未可及当，吾自有计。’乃逃于井。二人苦谏不从，以身蔽井，后主与争久之，方得入。”理论上，陈后主有“遁出”的机会，有机会而不“遁出”，其意存殉国，似可肯定。若要“正色以待之”，他的儿子十五岁的陈深就做到了，似非难事也。
 
-
-
 “似曾小小兴亡”
 
 辛弃疾（1140-1207）字幼安，号稼轩，山东历城人。他的父亲辛文郁，大概去世得很早；他的祖父辛赞，在金人到来、宋室南渡的时候，因为家中人口众多，不能脱身，就做了“遗民”。辛弃疾出生在沦陷区里，也做了“遗民”。那时候，北方已经沦陷十多年了。
@@ -1233,8 +1206,6 @@
 在这首小词之后七百年，清溪仍然奔快，陵谷依旧茫茫，一片神鸦社鼓之中，连“似曾小小兴亡”的所在，竟也另换地点了！
 
 1983年3月21日
-
-
 
 遥想《火烧圆明园》和《垂帘听政》
 
@@ -1294,8 +1265,6 @@
 
 1983年10月15日
 
-
-
 西太后怕什么？
 
 为香港《百姓》半月刊写专栏，今早写完《遥想〈火烧圆明园〉和〈垂帘听政〉》，写西太后，我说她“实在是中国传统孕育出来的一个执政者样板，她毒辣、她阴狠、她自私、她愚昧、她贪鄙、她‘举天下以奉一人’”。写完了，我再把她和国民党比较比较，发现颇有趣味。
@@ -1316,8 +1285,6 @@
 
 1983年10月15日
 
-
-
 “亡国”与“亡天下”
 
 我前年5月28日写《地下哲学家的札记》，感到“这个岛上的人真不够水准”。“人不够水准，当然不限于这个岛。但这个岛上的，却是此中之尤。最重要的原因是：在国民党这种怪子宫里，当然要生这些怪胎。”
@@ -1333,8 +1300,6 @@
 顾炎武说：“有亡国，有亡天下。亡国与亡天下奚辨？曰：易姓改号，谓之亡国；仁义充塞而至于率兽食人，人将相食，谓之亡天下。”这就是说，“亡国”是政权的失落，“亡天下”是道德的失落。国民党固然既“亡国”又“亡天下”，国民党之外的这群伪君子和乡愿，却无国可亡而有天下可大亡特亡。这些可怜虫，他们忘了他们真正该引以为宝的东西，他们忘了，只有不“亡天下”、只有执著是非大义，才是他们的唯一活路。可惜的是，他们却一个个器小易盈，浅盘于泥中，像“党棍”一样，变成了“党外棍”，这真是国民党教育、国民党涂炭生灵的大成功——国民党不但自己是浑蛋，它还代党外加工打造浑蛋！“武大郎玩夜猫子”，什么样的武大郎，就玩出来什么样的夜猫子。——爱因斯坦真笨，他写“相对论”，竟漏写了这一章！爱因斯坦真笨！
 
 1984年4月1日
-
-
 
 闻道南京似奕棋
 
@@ -1376,8 +1341,6 @@
 
 1986年7月14日晨
 
-
-
 死的是我？
 
 《邵氏闻见录》记邵康节、邵伯温父子故事，说邵伯温的曾祖母张夫人欺负他祖母李夫人，李夫人吃不消，要寻短见。一天晚上，却梦到神人对她说：“不要自杀啊，你会生好儿子。”李夫人相信了。后来李夫人病了，吃了医生开来的药，却梦到屋外有两棵木瓜树，可是右边那棵却枯死了。醒来告诉丈夫，丈夫就把药给倒掉了。到了生产时候，生了双胞胎，一男一女，女的变成死胎，男的就是邵伯温的爸爸邵康节。《邵氏闻见录》说：
@@ -1395,8 +1358,6 @@
 乍看起来，这是一个荒谬的哲学论题，但它似乎值得人们想一想，尤其在自己一个人的时候想一想：——你真的是一个人吗？你真的是活人吗？你真是活的那个你吗？还是你早就死掉了呢？
 
 1987年1月9日夜11时15分
-
-
 
 我最向往的一种死法
 
@@ -1417,8 +1378,6 @@
 结论是：与其形而上七窍流血而死，不如形而下一窍流精而亡。云雨巫山，断肠有道，吾与子共勉之！
 
 敖之1988年3月5日晨
-
-
 
 “诅咒别人死”？
 
@@ -1448,8 +1407,6 @@
 
 1986年12月15日
 
-
-
 你只能死一次
 
 7月21日国民党《中央日报》上登出文章，说《文星》再度停刊的消息传至文化界后，文化界人土几乎同表惋惜之意。又说《文星》发行人提到了《文星》停刊的一些因素，他特别强调“知识青年的品味已普遍变质，整个社会的走向，与我们一向所怀抱的理想，好像距离愈来愈远，这些才是像《文星》这样一份杂志，难以继续的真正原因”。《中央日报》肯定了这一原因，因而备致惋惜之意，我看了，却不禁好笑。
@@ -1471,8 +1428,6 @@
 因弗莱明（IanFleming）写书，书名《你只能活两次》（YouOnlyLiveTwice），看了《文星》的多此一复与自砸招牌，我恍然大悟：你只能死一次！
 
 1988年7月21日
-
-
 
 不老-不死-尸
 
@@ -1548,8 +1503,6 @@
 
 ⑨杨王孙还说：“且夫死者终身之化，而物之归者也。归者得至，化者得变，是物各反其真也。反真冥冥，亡形亡声，迺合道情。夫饰外以华众，厚葬以鬲真，使归者不得至，化者不得变，是使物各失其所也。”这又明显道出，厚葬是违反自然的化合与还原（归）了。
 
-
-
 还我万岁！
 
 喊“万岁”，本是中国老百姓表示开心的一种习惯。①战国时候，冯谖替孟尝君向老百姓收债，见了老百姓，他竟把债权凭证一把火烧掉，老百姓开心了，就大喊“万岁”。其他像蔺相如奉壁到秦国的时候，大家就喊“万岁”；田单伪约降燕国的时候，大家就喊“万岁”；纪信骗项羽说刘邦投降的时候，大家就喊“万岁”；项羽把刘邦爸爸老婆送回的时候，大家就喊“万岁”；陆贾送上建国方略（《新语》）的时候，大家就喊“万岁”。林纾《畏庐琐记》中有“万岁”一条，里面说：
@@ -1609,8 +1562,6 @@
 ⑩《明外史》万安传。
 
 (11)“万岁”在被统治者抢走后，引申出来另一个意思，就是指帝王之死。《史记-高祖本纪》：“高祖还归，过沛，留。置酒沛宫，悉召故人父老子弟纵酒，发沛中儿得一百二十人，教之歌。酒酣，高祖击筑，自为歌诗曰：‘大风起兮云飞扬，威加海内兮归故乡，安得猛士兮守四方！’令儿皆和习之。高祖乃起舞，慷慨伤怀，泣数行下。谓沛父兄曰：‘游子悲故乡。吾虽都关中，万岁后吾魂魄犹乐思沛。且朕自沛公以诛暴逆，遂有天下，其以沛为朕汤沐邑，复其民，世世无有所与。’”这种抢走，在早先时候，一般人还是不习惯的。《十七史商榷》卷二十六“万岁之期”条下说：“翟方进传：绥和二年春，李寻奏记，方进责数之，因备述星变而云万岁之期近，慎朝暮云云。师古注以万岁之期为指方进之死，言其事在朝夕。顾氏曰据文万岁之期意谓宫车晏驾，故此下郎贲丽欲以此灾移于宰相也。师古注谬处不可胜摘，先儒已著而未行世者，聊出之。”其实颜师古的错误，正可看出早先时候一般人还不习惯“万岁”是帝王专用的。
-
-
 
 奴才学发微
 
@@ -1742,8 +1693,6 @@
 
 ⑩石秀这段话，赛珍珠（PearlS.Buck）英译《水浒传》（AllMenAreBrothers）中译为：“Youareaslaye,andyouareslaveofaslave!”不过奴才在官式文书中不能这样译。胡适给柳无忌的信中说：“满清一朝，凡旗籍的官吏，无论官多么大，皆自称‘奴才’，若译英文，也必须用YourMajesty'sObedientSlave,似无法简化的。”（《传记丈学》第三十四卷第六期，柳无忌：《我所认识的胡适》）
 
-
-
 李斯传新读
 
 《史记》卷八十七有《李斯列传》，写秦朝丞相李斯被宦官赵高整，关进牢里。
@@ -1804,8 +1753,6 @@
 
 1984年3月1日下午，以三小时写成
 
-
-
 招了再说
 
 尉缭（公元前4世纪）的《尉缭子》，是一部被小看了的著作。它一直被视为假书，不被重视。1972年4月，在山东临沂银雀山的一号、二号汉墓里，发现了一批竹简，由于竹简中有汉武帝元光元年（公元前134）的历谱，可以断定这批竹简是两千一百年前就已流传的文献。又由于竹简中用字不避汉朝皇帝的讳，又可以断定竹简的古书，都早于汉朝。再往上推，秦二世在位三年，秦始皇在位三十七年。上距战国，不过四十多年，四十多年又值秦始皇统一思想，没人有闲工夫造假书，所以竹简中的古书，都是战国以前的原装货，应无疑义。这批竹简中，有古书《尉缭子》。《尉缭子》一直被许多大牌学者如钱穆等人怀疑是后代假造的书、是伪书，并且说得头头是道。但是这批竹简一出土，证明了真金不怕众口铄，大牌学者也者，不过大言欺人而已。
@@ -1837,8 +1784,6 @@
 罗真人说李逵“这人是上界‘天杀星’之数，为是下土众生，作业（孽）太重，故罚他下来杀戮。”李逵的救世方法只是杀坏人，这是他的使命感，但他知道要杀坏人，得先免于被坏人所杀，所以他先招了再说。——谁说李逵是粗人，他粗中有细得很呢！
 
 1984年5月4日
-
-
 
 《狱中杂记》今译
 
@@ -1916,8 +1861,6 @@
 
 1985年2月21日夜10时写起，两点写成，共花四小时
 
-
-
 “宰白鸭”
 
 2月9日报上登出消息：省畜产试验所宜兰分所育种成功的两种鸭宝宝，从8日下午4时38分起，有了正式的名字。今后在国际间有关的畜产文献上，将可以看到“宜兰白鸭——台畜一号”及“宜兰改鸭——台畜十一号”的字样。台畜一号的“先祖”是本省原有的褐色菜鸭，由宜兰分所于1966年起着手育种试验，先挑选稀有的白色羽毛菜鸭进行选育，经过长期严格的闭锁族群繁殖、分离和选拔，育成新品种的白色菜鸭。被命名为宜兰白鸭——台畜一号的白色菜鸭，具有原先褐色菜鸭的小体形、产蛋多的优点；同时在白色菜鸭育成后，宜兰分所另外试验研究其近亲七代品系，使成为生物研究上很珍贵的试验动物，可供各项研究之用，是全世界遗传组成纯合度最高的鸭品系，若继续加以维持，可望成为供癌症研究之用。尤其是白色鸭羽毛，价值较褐色鸭羽毛，每只髙出十至十五元，为鸭农所乐于饲养，其声名也早已远播海内外。
@@ -1948,8 +1891,6 @@
 
 1985年2月10日晨
 
-
-
 要清白，请长寿！
 
 中国正史中，从宋朝欧阳修主编的《新唐书》开始，有所谓“奸臣”传，后来的正史，像《宋史》、《辽史》、《元史》、《明史》，纷纷援例，于是忠奸之分，在历史上和观念上，也就愈发显明。正史以外，中国的小说戏剧，对忠奸的判决，影响极大。尤其在戏剧里，为了帮助观众有“忠奸立判”的效果，“红脸”和“粉白脸”，也就应运而生。忠肝义胆的自然是勾红脸，如关公。权奸误国的自然是勾粉白脸，如曹操，这种“二公法”的利落，实在给了观众不少方便，于施展爱憎之间，少掉了不少麻烦。
@@ -1970,8 +1911,6 @@
 
 所以，也许可以这么说：有冤屈的人，必须有赖于“时间的因素”来辨冤白谤，没有当时反击能力的人，他必须设法长寿，练得比他的“敌人”活得更长久。这些话，说来好像笑谈，但笑谈之中，往往有着不少白发和眼泪。
 
-
-
 “愿身成骨骨成灰”
 
 梁启超《饮冰室诗话》一开始就有一段写戊戌政变的殉难古谭嗣同，全文是：
@@ -1988,8 +1927,6 @@
 
 1985年3月24日午
 
-
-
 “不仅仅为了面包”
 
 前一阵子中华航空公司驾驶员王锡爵驾机飞回大陆，国民党上上下下口口声声说：王锡爵服务华航已二十年、月入新台币二十多万元、生活条件良好、婚姻家庭都美满、儿女皆成年、小孙子即将出世，不久就可含饴弄孙、安享天伦，岂有抛弃妻儿去“投匪”的道理？有人问我意见，我嗤之以鼻，答复说：“太小看人了吧！人活着，不仅仅为了面包。”
@@ -2003,8 +1940,6 @@
 文天祥生性善于“使物”、“役物”，排场极大，府第豪奢，家里甚至养歌星为他唱歌、给他打炮，可是，他一旦从容就义，虽身处漏水的土室，也不肯以“物”易其志，虽然自己过去耽于“物”中，但一有必要，他弃“物”如敝屣。《文子》中一段话，正好描写这位文丞相，《文子》说圣人“外与物化，而内不失情。”“外与物化”，是形式上也跟“物”相与俯仰，随缘折腾个没完；“内不失情”，是尽管如此，但自我的理想与使命却绝对“不为物使”，——一旦“物”成了障，则一律“于我如浮云”处之。王弼说“圣人之情，应物而无累于物”，正是指此也。
 
 1983年9月9日晨
-
-
 
 “衣沾不足惜，但使愿无违”
 
@@ -2048,8 +1983,6 @@
 
 1984年5月8日
 
-
-
 敲碎张杰的牌位
 
 全祖望（1705-1775），字谢山，一字绍衣，自署鲒埼亭长。浙江鄞县人。他是清朝进士，因为性格刚方，所以不容于时。他这种刚方的性格，早在十四岁时就显露出来了。他十四岁去瞻仰乡贤名宦祠，看到有张杰的脾位，张杰是出卖张苍水的无耻将军，全祖望一怒就把牌位给抓下来，用锤子敲碎，丢到池子里。
@@ -2068,8 +2001,6 @@
 
 1984年9月10日夜12时半
 
-
-
 中国真人的没落
 
 司马迁说墨子和孔子是同时人，或者稍后；孙诒让说墨子比孔子还早。
@@ -2079,8 +2010,6 @@
 墨家的救世，比起儒家来，动人得多。孟子一方面明知“墨子兼爱，摩顶放踵，利天下为之”，一方面却血口喷人，骂墨子“是禽兽也”。这未免太不公道、也太伪君子了。儒家高高在上，以不耕而食为君子、以学稼为小人，一心要“其君用之，则安富尊荣”，生活起居，都要乘舆代步、从者众多的大排场，这样的救世者，比起“赴火蹈刃，死不旋踵”的墨家来，是应该脸红的。孟子不但不脸红，竟还骂墨子是禽兽，这又算什么呢？
 
 墨家的门徒很多，但他们过的，不是“有酒食，先生馔”的生活，而是“短褐之衣，藜藿之羹，朝得之，则夕弗得”的苦行生活。他们是中国有史以来最伟大的一群人物，他们比起儒家的门徒来，后来是没落了。这种没落，是中国真人的没落。
-
-
 
 地藏菩萨的本愿
 
@@ -2128,8 +2057,6 @@
 
 1984年4月21日
 
-
-
 菩萨就只好打倒他
 
 古往今来，志士仁人舍身救世，他所遭遇的困难，总不外是圣魔大战的格局。魔在佛经中就是魔王，他名叫波旬、也叫波旬踰、波卑面，他在释迦牟尼出世时，就是魔王了①。佛经中说他是“欲界第六天之主”，常以憎恨佛法、断人慧命为事。他是像国民党一样的反动分子，《弘明集》有南朝梁释宝林《破魔露布文》，其中说：“故魔王波旬，植愚根于旷始，积迷心于妄境，泛三染之洪波，入邪见之稠林。”就是指此。
@@ -2155,8 +2082,6 @@
 ②“窣堵波”是梵语佛塔的意思。这种佛塔安放佛物、经文，或埋藏有名僧人骨、牙、头发等。古人译作方坟、圆冢、灵庙等。《大唐西域记》说：“吠舍利国有窣堵波，是毗摩诘故宅基址，多有灵异。去此不远，有一神舍，其状垒砖，传云积石，即无垢称长者现疾说法之处云。去此不远有窣堵坡，长者子宝积故宅也。”又说：“伽蓝北有窣堵波，高二百余尺，金刚泥涂，众宝厕饰，中有舍利。”王安石《临川集》《与道原过西庄遂游宝乘诗》写：“周颙宅作阿兰若，娄约身归窣堵波。”都是指此。
 
 ③“莲华”即莲花
-
-
 
 敌友江湖
 
@@ -2187,8 +2112,6 @@
 显然的，这种有浪漫气质的小故事，已随着现代统治的到来，而变得花果飘零了。——现代的敌人，已经一派宁波商贾的卑下，毫无江湖情调了。
 
 1984年7月15日
-
-
 
 “退敌学”举隅
 
@@ -2234,8 +2157,6 @@
 
 1986年11月5日傍晚
 
-
-
 把敌人出版
 
 骆宾王（约公元640-约684），浙江义乌人。他年轻时就会写文章，尤其精于五言诗，“尝作《帝京篇》，当时以为绝唱”。唐高宗时候，“为长安主簿。坐赃，左迁临海丞，怏怏失志，弃官而去。”
@@ -2262,8 +2183,6 @@
 
 〔附记〕关于史可法答多尔衮书，捉刀者有不同说法，据邓之诚《史忠正答摄政王多尔衮书》（《古董琐记》）：“摄政王致史忠正书，为华亭李舒章雯笔，见《啸亭杂录》。史复书，乐平王纲笔也。纲字乾维。见南昌彭士望《耻躬堂集》。按谈迁《枣林杂俎》云：出自沔阳黄曰芳笔。曰芳庚辰进士。忠正俾答书，词颇峻。忠正手删之云：‘不必角口。’曰芳曾刻其原草。《借庵偶笔》云：乃新建欧阳五敕笔，江都强惟良脱稿。未知孰是。”
 
-
-
 小人-小人-打小人
 
 许多人一生都难免遭到小人之患。信命的人说这是“命犯小人”，认为是命中注定；不信命的人不相信什么命中注定，但不否认确有“路遇小人”的情况发生。
@@ -2277,8 +2196,6 @@
 在另一方面，大丈夫式的做法则另有一套。大丈夫“打小人”的方式是“兵来将挡，水来土掩”，是“你打我一拳，我踢你三脚”，是以色列式的大力报复主义、快速报复主义。大丈夫绝不姑息小人，绝不让小人横行，绝不纵容小人，绝不让小人陷害他、诽谤他、妨碍他后而能免于惩罚。当然，大丈夫的做法是堂堂之阵、正正之旗的，他展示实力，但用的是合乎正义与法律的手段、用的是正常的奇兵，大丈夫是不用下流手段的，当然也绝不用香港模式的精神胜利手段。——胜利是全面的，只有精神，怎么够呀！
 
 1986年1月23日午
-
-
 
 经典排名战
 
@@ -2388,8 +2305,6 @@
 
 1985年1月14夜12时半
 
-
-
 从犀牛看政治
 
 白居易认为诗不是“嘲风雪、弄花草”的，诗该“救济人病，裨补时阙”的。他曾编《讽谕集》，收诗一百七十二首，批评时政，他要求统治者“欲开壅蔽达人情，先向歌诗求讽刺”。结果诗一发表，“权豪贵近者相目色厉，执政柄者扼腕，握军要者切齿”。
@@ -2450,8 +2365,6 @@
 
 ③犀牛来中国，早在汉朝就有了。见《后汉书-章帝纪》。
 
-
-
 别开“死”面
 
 ——给邓维桢的信
@@ -2489,6 +2402,3 @@
 比上不足，少文化太保两年．
 
 1987年10月29日
-
-
-
