--- a/09.历史文化类/中国性研究.md
+++ b/09.历史文化类/中国性研究.md
@@ -1,4 +1,8 @@
-#《中国性研究》目录
+# 中国性研究
+
+<!-- toc -->
+
+## 目录
 
 * 《中国性研究》自序
 * 一、《易经》中的性交文字
@@ -46,8 +50,6 @@
 * 四三、让人肏了三百年才复仇吗？
 * 四四、柏杨替武则天乱伦
 
-
-
 《中国性研究》自序
 
 这本《中国性研究》，共收有五十篇文字，有学术性的、也有通俗性的，全部是环绕在中国人生殖器官、两性肉体、两性观念而论述的，其中为了阐明新意，也偶羼进一点洋玩意。总括说来，这是一本革命性、启发性极强的著作。“生民以来，所未有也！”
@@ -71,8 +73,6 @@
 在出这本《中国性研究》的同时，我另有一本《中国命研究》出版，使“性”、“命”之学，开万古未有之境界与心胸。《论语-公冶长》记子贡曰：“夫子之文章，可得而闻也；夫子之言性与天道，不可得而闻也。”《史记-孔子世家》亦记子贡曰：“夫子之文章，可得闻也；夫子言天道与性命，弗可得闻也已。”如今我独发万古之秘，不但文章可得而闻，并且“性命”也可得而闻。孔子生而有知，必当说：“敖也，好勇过我，有所取材。”“著书有道，丘不与易也！”
 
 1990年3月4日
-
-
 
 《易经》中的性交文字
 
@@ -206,8 +206,6 @@
 
 (13)《易》中称阴爻为“六”，见④〕。
 
-
-
 《战国策》记性交姿式
 
 《战国策》是战国时代策士、说客提供策略的结集，记录战国七雄齐、楚、燕、韩、赵、魏、秦和西周、东周、宋、卫、中山等十二国的史事，以国为单位，共收三十三篇，前后包括了两百四十五年的历史。这就是说，它包括的，不止一般所谓战国时代一百八十一年的历史。（战国起算方法，照《史记》是公元前475，照《资治通鉴》是公元前403，有七十多年的误差。从宽来算，战国早期也就是春秋晚期。）
@@ -230,8 +228,6 @@
 
 1984年10月5日
 
-
-
 佛经中的性交文字
 
 佛经里对女人殊无好评。《毗奈耶杂事》说女人有五种过失（嗔、恨、作恶、无恩、刻毒），像大黑蛇一样；《增一阿含经》说女人有五想欲（不净行、嗔恚、妄语、嫉妒、心不正）；《正法念经》说女人有三放逸（自持身色、自持丈夫、骄慢）……佛经的终极立论不过希望男人脱离女人、女人变成男人，除此之外，实在看不出还有什么更高明的。
@@ -247,8 +243,6 @@
 这里所说“金刚杵，就是硬鸡巴；所说“莲华”、“莲花”就是女人阴部。佛经中认为性交是“敬爱”的事，“由此生出一切贤圣，成就一切殊胜事业。”这种对性交的赞美，真是古今罕见了！
 
 1985年4月18日
-
-
 
 且且且且且
 
@@ -282,8 +276,6 @@
 这些话，都指出了孔庙中用牌位，早于用塑像。牌位的运用。正好与传统中的生殖器崇拜若合符节。“主（牌位）以依神”、“木主栖神”，说来说去，都是用牌位做祖先的一个象征，这象征用鸡巴做大特写，完成了生殖器崇拜的最有趣的建构。呜呼，中国文化、中国文化，在我们这种专家眼里，文来化去，不过如是耳！
 
 1984年10月8日晨
-
-
 
 狂童之狂也，鸡巴！
 
@@ -329,8 +321,6 @@
 
 1984年10月8日午前
 
-
-
 记“阴茎异常勃起”
 
 我向林永丰医生说：“我有一些有关中国古典的“阴茎异常勃起”（priapism）的材料，想写一篇文章，可惜我对“阴茎异常勃起”所知有限，我只知道这是一种罕见的毛病。我第一次听说是二十年前《传记文学》刘绍唐告诉我的，刘绍唐说他有一次住院，邻床一位病人生了怪病——“鸡巴老是硬的”。我听了甚感兴趣，一直没忘。今天如蒙你林医生给我一点学理上的材料，我最感谢。
@@ -367,8 +357,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1986年7月8日夜
 
-
-
 从犀牛看屌
 
 犀牛不论“单角犀”（包括印度犀、爪哇犀）或“双角犀”（包括非洲犀、白犀、苏门答腊犀），都有犀角（RhimoceriCornu），犀角也叫犀牛角或香犀角。GENESIS杂志说，好的犀牛角磨成粉，每公分高达美金五万元；完好带角的犀牛头，一颗高达美金一百万元（Thecurrentpriceonacompleterhinohead（withhorn）isnearingamillionbucks，we'retold．Andpowderedrhinohornisfetching＄50,000pergram.）。令人难以置信，但按单位重量算，说它是全世界最贵的东西，庶几近之。
@@ -382,8 +370,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 正因为犀牛角这样缺货，所以，靠生殖器串联的国民党集团，也就要横插一屌。今年2月23日的南非《周日时报》（SundayTimes）上，就登有中华民国的侨选监察委员严诺涉嫌走私贩卖犀牛角的消息。犀牛在南非是受保护的稀有动物，岂容国民党国会议员在那儿走私犀牛角？东窗事发，当然是天大的丑闻。到了6月5日，国民党同路人吴三连的《自立晚报》开始为严诺遮丑，说什么严诺极力台认涉及此案，“他认为此种可能为媚共之某华侨意图破坏我政府形象者所提供”。令人不解的是，你不在台湾监察院行使监察权，却跑到南非大丛林去玩犀牛角，这种行为，来免太屌了吧？你不给人破坏当局形象的屌行为，谁又破坏得了呢？
 
 1986年7月16日
-
-
 
 政治与生殖器
 
@@ -414,8 +400,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 这封信，也许我会在《李敖千秋评论丛书》中发表。其中虽有鸡巴等字眼会被戴有伤风化的帽子，但是鸡巴字眼明见于《红楼梦》，国民党必须得先查禁《红楼梦》，才能采用这种罪名，但是他们总不能查禁《红楼梦）吧？
 
 敖之1982年11月9日
-
-
 
 谨防被阉
 
@@ -453,8 +437,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1965年4月20日
 
-
-
 长程射精的另一面
 
 我在《禁禁-禁禁-禁》（《李敖千秋评论丛书》第二十三期）里，发表《长程射精和中国文化》，谈到台中看守所人犯侯贵生，把精子偷渡，使太太人工授精的事。史通看了，写信给我，他说：
@@ -468,8 +450,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 我写《长程射精和中国文化》，重点不在人工授精真相细节，而在借此讨论“中国匹夫匹妇们的思想型模”，事实上，有办法的人犯似乎不必那么麻烦吧？——能够搞到女人，又何必打手铳呢？
 
 1983年6月20日
-
-
 
 神仙也要小便的
 
@@ -498,8 +478,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 1985年3月25日
 
 〔附记〕《搜神记》中“厕神”一条：厕神者，莱阳县何氏女，名婿，字廉卿，自幼读书辨利。唐垂拱三年（587），寿阳刺史李景纳为妾，其妻妒之，遂阴杀之，置其尸于厕中。魂绕不散。如厕，每闻啼哭声，时隐隐出现，且有兵刀呵喝状。自是大着灵异，人为尸祝之，悬箕而降，能知祸福。神死于正月十五，故独显灵于正月也。
-
-
 
 不随他人说短长
 
@@ -530,8 +508,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 写到这里，我想起《花花公子》（Playboy）中的一幅漫画，画的是一个身穿美国开国服装的半裸女人，一手执鹅毛笔、一手执“独立宣言”文件，说：“哇！汉考克先生，你的是他们所有人中最大号的。”（“Golly，Mr.Hancock，yoursisthebiggestofthemall.”）汉考克是“独立宣言”带头签名的人，半裸之女，出此戏言，显然意存已跟所有开国先贤都有过一手，一一领教之下，乃有此“归纳法比较研究”结论也！漫画虽然极尽婉谑，但是半裸之女，不随他人说短长，要亲自来过、“风骚”过而后定评之，这种态度，倒真是史学家的认真态度呢！
 
 1985年12月9日
-
-
 
 生殖器引发的杂感
 
@@ -571,8 +547,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1983年8月18日
 
-
-
 生殖器关系的“积极好处”和“消极好处”
 
 国民党集团基本上是生殖器串联的集团，进入这“0与1之间”以后，不论湿的干的，都可利益均沾或分沾，反正有好处就是了。
@@ -584,8 +558,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 当然“消极好处”的获得，端赖生殖器关系亲疏远近而定，无法强求。孟绝子被捕，他的爸爸与姐夫都是少将，国民党少将多如野狗，自不足以沾多少光，但少将毕竟多少也搭上一点线——照刘玉章“将军是鸡巴，将军手下是鸡巴毛”的逻辑，少将与蒋家纵无生殖器关系，至少也有鸡巴毛关系，所以孟绝子在倒霉入狱时，终得“消极好处”，少挨了几个耳括子——别以为在狱中少挨几个耳括子不算什么，别忘了莎士比亚剧中倒霉之君以江山易马的故事吧，刑求之下、一无所恃之时，“消极好处”比“积极好处”还实惠得多呢！
 
 1987年10月19日
-
-
 
 不要只抓老二！
 
@@ -601,8 +573,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 ②张纲这话其实是有所本的，是前汉督邮侯文的话。《汉书》卷七十六《孙宝传》中有这样一段：“征为京兆尹。故吏侯文以刚直不苟合，常称疾不肯仕，宝以恩礼请文，欲为布衣友，日设酒食，妻子相对。文求受署为椽，进见如宾礼。数月，以立秋日署文东部督邮。入见，敕曰：‘今日鹰隼始击，当顺天气取奸恶，以成严霜之诛，掾部渠有其人乎？’文中曰：‘无其人，不敢空受职。’宝曰：‘谁也？’文曰：‘霸陵杜穉季。’宝曰：‘其次。’文曰：‘豺狼横道，不宜复问狐狸。’宝默然。”
 ③1974年2月，傅斯年发表《这个样子的宋子文非走开不可》，只追到皇亲国戚的罪状，而不追当今圣上的罪状。
-
-
 
 也也也也也
 
@@ -626,8 +596,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1984年12月19日夜
 
-
-
 记清朝后宫
 
 清朝的后宫同辈情形是：皇后（大太太）；其次为皇贵妃（大姨太）；其次为贵妃（二姨太，二人）；其次为妃（三姨太，四人）；其次为嫔（四姨太，六人）；其次为贵人（五姨太，人数不定）；其次为常在（六姨太，人数不定）；其次为答应（七姨太，人数不定）；最后为宫女。
@@ -647,8 +615,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 清朝第二个皇帝清圣祖康熙的后宫中，也有汉姓。这种情形，在皇宫中就已开始普遍。最值得注意的是第五个皇帝仁宗嘉庆，他的生母孝仪皇后本姓魏，是他父亲高宗乾隆的三个皇后之一（魏后）。据《清实录》，她在嘉庆二十三年（1818）被儿子特谕于五牒内改书“魏佳氏”，这好像特地掩饰当今圣上已有一半血统是汉族。
 
 1984年7月5日
-
-
 
 头大-头大-两头大
 
@@ -682,8 +648,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1985年10月20日
 
-
-
 屁股-屁股-翘屁股
 
 ——有关屁股的一则笔记
@@ -703,8 +667,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 有关屁股之事甚多，以上只就审美的“肉体上屁股”而言。摩根斯特恩（ChristianMorgenstern）曾有诗细分出“肉体上的屁股”（fleshlybottom）和“精神上的屁股”（spiritualbottom），我之此文，则专指前者，“国父已死，没有精神”也。
 
 1985年12月25日午
-
-
 
 陆小芬的乳房问题
 
@@ -732,8 +694,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1985年2月9日
 
-
-
 准露奶头的德政
 
 玉铭局长乡弟被告：
@@ -749,8 +709,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 临奶欢喜，只知尺寸而不知分寸、只知有美女而不知有大官，信笔以告，玉铭老弟其识之！
 
 李敖1988年1月7日
-
-
 
 大义裸体
 
@@ -794,8 +752,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1986年4月22日夜1时
 
-
-
 有奶没奶都是娘
 
 发展心理学中有一个有趣的实验，就是给小猴子“人工母亲”的实验。在西尔格德等人（ErnestR.Higard,RichardC.Atkinson，及RitaL.Aikinson）的《心理学》（IntroductiontoPsychology）里，有这样一段：
@@ -817,8 +773,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 但是，对人类而言，很多人实在不适合做妈，她们对子女而言，只是榨取与伤害，子女们跟这种妈在一起，反倒“很难发展出正常的社会行为”。我认识的一位新女性，就是如此。她的星妈母亲，是我生平仅见的一个恶妇，新女性长大后，变得乖谬异常，全无“正常的社会行为”，显然跟她不幸有这种星妈有关。心理学家一再拿动物实验，但是动物是单纯的，人类的长成却复杂得多，我看了新女性的身世，真的感到她如果当年有“人工母亲”来代替星妈，岂不更好？美国总统杰佛逊（ThomasJefferson）对人说，他和他母亲一起活了二十五年，但他如果能再活一次的话，他宁愿不再活那二十五年！人间毕竟有这类令人痛苦的母亲，有了她们，要命的心理学才可以被推翻，而心理学有时候是要打倒的。不是吗？
 
 1984年10月8日午后
-
-
 
 “好为妇人出脱”
 
@@ -846,8 +800,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 这种前进的言论，在礼教下的中国，真是大胆、真是少见。他反对逼人做贞节烈女。一百多年后重看他的言论，真令人有智仁勇俱全之感。
 
-
-
 论难养的
 
 中国思想中最早论女人与小人的文字，见于《论语-阳货》篇。《阳货》篇里记孔子说：“唯女子与小人为难养也！近之则不孙（逊），远之则怨。”钱穆在《论语新解》里做“白话试译”如下：“先生说：只有家里的妾侍和仆人最难养。你若和他们近了，他将不知有逊让。你若和他们远了，他便会怨恨你。”钱穆又解释说：“此章女子小人指家中仆妾言。妾视仆尤近，故女子在小人前。因其指仆妾，故称养。待之近，则狎而不逊。远，则怨恨必作。善御仆妾，亦齐家之一事也。”钱穆这些解说是不妥的、错误的。
@@ -870,8 +822,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 ①但是古代的注疏家也觉得孔子这段话骂女子与小人骂得太凶了。也该有个例外，所以补了一句话：“此言女子，举其大率耳。若其禀性贤明，若文母之类，则非所论也。”这就是说，孔子虽然这样说，对有些好女人（像周文王的妃——文母——等人），当然例外。我当然相信女人中也有例外，只是世界上这种女人太少了。
 
-
-
 鞭子缠身可也！
 
 19世纪的德国哲学家尼采（FriedrichWilhelmNietzsche），在他的名著《查拉图士特拉如是说》（AlsoSprachZarathustra）里写道：“要到女人那儿去吗？别忘了你的鞭子！”这段活，据尼采的妹妹说，是得自屠格涅夫（IvanTurgenev）《初恋》（PervayaLyubov）中父亲鞭打情人的景像，这显然有着“虐恋”（algolagnia）的痕迹。霭理士（HenryHavelockEllis）在《性心理学》（PsychologyofSex）中说：
@@ -889,8 +839,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 真正解决这种“鞭下爱情”的，似乎仍有待于有几分Philanderer气质的花花公子型人物，而不是哲学家。花花公子型人物对女人最能占上风，他们不用鞭子打女人，只是鞭子缠身而已。他们能主动的仅受女人之利、不蒙女人之害，而女人也因他们的熟练、从容和自如而委身相向、而皆大欢喜。我相信最后解决亚当夏娃以来男女纠缠不清问题的，是花花公子，而不是哲学家。花花公子可以说你的是我的，女人可以说我的是你的，但哲学家却不是你的也不是我的，而是他妈的。这就是“李敖如是说”，鞭子缠身的女人是我人证。
 
 1984年2月22日晨
-
-
 
 王八一落千丈考
 
@@ -984,8 +932,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1984年3月7日
 
-
-
 王八过敏症
 
 1969年4月里，刘家昌想做导演，筹拍《四男五女》（刘家昌原定名《滑稽人生》、《生老病死》、《四男四女》，我说《四男四女》没有戏，四男五女才有戏，就改为《四男五女》），但他那时候名气不够，别人不相信有大阔老投资他拍片，他就想找个大阔老支持他——假装支持他，以做噱头、以昭大信。那时候有自用汽车的人还很少，而我却是汽车阶级，他看中了我，要我开着汽车，做他的制片人，我开出条件，要向他“强销书刊”——认购《古今图书集成》一套，以示友好，他同意，并立字据如下：
@@ -1036,8 +982,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1984年2月7日，以两小时写
 
-
-
 营妓考
 
 营妓在古今中外部有之。1096年到1099年间随十字军东征的营妓，数目就有五千多；1298年神圣罗马帝国皇帝率军进城时，就有八百多营妓随行；1567年西班牙远征荷兰时候，就有四百个骑马的营妓和八百个步行的营妓随行。近代最有名的营妓制度是日本鬼子，他们把营妓叫做“随军慰安妇”。国民党在大陆时，尚无此制，但高级军官不愁没女人。社会学家陈达在《浪迹十年》中，有“某师长携眷行军”（1945年1月28日）一条，说：
@@ -1079,8 +1023,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 想不到当年以笑话视之的验看医生，如今在国民党统治下，已经并非笑话而是堂而皇之的“德政”矣，妙哉！善哉！
 
 1986年4月9日午
-
-
 
 国民党与营妓
 
@@ -1750,8 +1692,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 (21)排长华士恒告诉我：马祖“军中乐园”8时开门，4时黄牛即去买票。当年规定每次四十分钟，但四十分钟内，姑娘摇出来的多余时间，可以自卖黄牛票给另一嫖客，每张二十元，这二十元为姑娘独得。并且还可以挑人卖，她有选择权。金门在1967年时候，妓女每天卖过三十次者，每多卖一次，多得一元。
 
-
-
 国民党与“私窑子”
 
 国民党搞“军中乐园”，自我宣传“德政”之一在防止性病，“军中乐园”有所谓“保健室”、“消毒室”、“检诊室”之设，有病包看、无病发证云云，但在事实上，多是官样文章，没人理它。于是，在“军中乐园”以外，附近照样有“私窑子”出现。国民党三民主义统一妓院的美梦，自此全被打破。
@@ -1767,8 +1707,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 “私窑子”也跟阿兵哥有感情事件。阿兵哥要写情书，多找到我头上来，有的还点写，要带上几句英文，以为炫耀。其实写信收信双方皆不懂，但这一心态，殊可注意。
 
 1986年4月9日
-
-
 
 国民党“军中乐园”及其他
 
@@ -1799,8 +1737,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 当然，相对的，在国民党今日的统治下，妓女的凄惨也是超迈前人的。当年《北平娼妓调查》书中，己有妓女“三四等的，每天留一个客住宿，是必定的。其余白天来三四个客……在三四等是极平常的事”的记录，可见当年的接客次数，远非我在《“军中乐园”的血与泪》中所述接客五六十次者可比。——国民党今日在台湾的黑暗统治，光此一端，即可空前绝后矣！
 
 敖之1986年5月1日夜
-
-
 
 写在《雏妓哲学家》的后面
 
@@ -2106,8 +2042,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1982年4月3日
 
-
-
 雏妓问题
 
 不容儿辈妄诙兵，镇物何妨一矫情？
@@ -2191,8 +2125,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1982年4月10日
 
-
-
 从“我是嫖客”到“我是鸡巴”
 
 “张大帅”张宗昌将军是国民党宣传下的“北洋军阀”，老粗也，心直口快，不失为至性之人。有一次周转不灵，军饷发不出，部下在闹，他挺身而出，大骂说：“混帐！王人蛋！发不发饷能闹吗？我爱你们，我是嫖客，你们是婊子，嫖客会欠婊子的钱吗？饷会发的，都他妈的婊子给我下去！”这一骂，部下变成了下部，都骂服了。
@@ -2204,8 +2136,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 如今国民党在台湾，一如“北洋军阀”在中国的一角大特写，但国民党远不如“北洋军阀”，“北洋军阀”昏庸有之、胡来有之，但绝不卖国。国民党在1945年8月14日与苏联签订所谓《中苏友好条约》，搞“蒙古独立”，这一“蒙独”之下，比台湾大四五十倍的中国领土，都脱离了中国。国民党卖了国还不说，居然整天栽诬别人，说别人卖国。你看电视上电影上整天骂“张大帅”，说“北洋军阀”卖国，但是外蒙古是军阀手上收回来的，是国民党手上卖出去的，到底是谁卖国，一览无余。九一八事变后，日本人千方百计拉拢张宗昌，但张宗昌毅然从东京返国，身穿大礼服、头戴大礼帽，招待记者宣布：“咱家可不会钻烟囱（做汉奸）！”比起国民党望风降日的巨头们来，军阀真是大义凛然了！
 
 一九八四年三月二十一日晨三时
-
-
 
 国民党与搞屄
 
@@ -2220,8 +2150,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 但是，搞屄搞到涉及利用权势伤害别人或影响公众权益，则就不然。夏桀搞屄搞到家破。商纣搞屄搞到国亡；齐庄公搞屄搞到政变；吕不韦搞屄搞到权移。……政治人物大权在握，牵一屄而动全身，这种当事人的身份，搞屄可就不那么简单了。大权在握的人，不把严加管束，轻则以公帑付遮羞、奉公产以赠一人；重则串联起生殖器关系的王朝，天下不归于智囊而归于肾囊，则也就离败亡不远。当然他们的败亡不足惜，但是百姓何辜，受了他们大头之害以后，何能再受他们小头（屌）之害？所以，揭发他们“个人行为”、“私人行为”的障眼法，挖出绊闻丑闻，也是大家义不容辞的事。要知道凡属可受公评的事，就决非“个人行为”或“私人行为”，我们不要给他们骗了。
 
 1986年4月10日
-
-
 
 鸡巴考
 
@@ -2246,8 +2174,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 从字源上看，《金瓶梅词话》中的鸡巴，是源于字典中的“髠”部。髠的本意是长发下垂，也是黑白发夹杂，属于毛的一类。《红楼梦》比较晚出，所以书中的鸡巴，就开始从简，干脆就源于字典中的“毛”部了。虽然在字典中，都查不到这些活生生的字。
 
 至于鸡巴，是更晚出的字眼，它在写法上变得更通俗了，已经越来越现代化了。
-
-
 
 相下部
 
@@ -2287,8 +2213,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1986年9月23日晨
 
-
-
 柏杨割错了屌
 
 我在《柏杨忘恩负义了吗？》（《千秋评论》第二十九期）里说：
@@ -2318,8 +2242,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 明白了这一历史背景，我们就会知道，柏杨所谓的“有人说刘彻先生爱司马迁的才华，才减死一等。司马迁先生的罪不至死，而减死一等，还有鞭打，又为什么非腐刑不可。唯一的解释是，刘彻先生喜欢这个调调，称之为“割屌皇帝”，似是最恰当的谥号，……”就全是胡扯了。汉武帝爱什么才华，他杀人如草芥耳，岂惜一司马迁？只是汉朝依法有赎刑之例，司马迁在两个烂苹果中，自选其一而已，汉武帝又哪来闲工夫针对一个人“指定割掉生殖器”？柏杨把暴君普遍的残暴性，上下其手，予以特定、予以局限，说汉武帝是“割屌皇帝”，这真未免太开脱暴君了。何况，《史记》秦始皇本纪说秦始皇把“隐宫（宫刑）徒刑者七十余万人”去大兴阿房宫等土木，看了这种七十万的大数目，我奇怪柏杨为什么不曰一下秦始皇是“割屌皇帝”而要曰汉武帝是“割屌皇帝”，这种轻重不分，乱在司马光的历史书后胡说八道，真未免太屌了一点吧？
 
 1984年4月20晨
-
-
 
 中国人的“睾丸情结”
 
@@ -2365,8 +2287,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1986年5月23日
 
-
-
 新女性战歌附答
 
 大家烧奶罩，
@@ -2405,8 +2325,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1984年3月20日10分钟作
 
-
-
 剃阴毛的另一用处
 
 我写《阴毛的发扬光大》（《千秋评论》第七十五期），举例证明了中国文化中，物尽其用的范围，要比洋鬼子宽广。以阴毛为例，阴毛在洋鬼子方面，用处不外是生理的、艺术的、煽情的，但在中国文化中，阴毛却别有相术上和医药上的用处。文章付印后，我在1988年1月14日的《台湾时报》上，看到有消息如下：
@@ -2428,8 +2346,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 真令我大开眼界！除了阴毛生八脚虫、或是外科手术的原因外，我真不知道剃阴毛还有这么大的学问。——中国文化礼失求诸野，在东南边缘如此野法，真是“台湾第一”矣！
 
 1988年3月5日晨
-
-
 
 让人肏了三百年才复仇吗？
 
@@ -2457,8 +2373,6 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 
 1986年3月6日午
 
-
-
 柏杨替武则天乱伦
 
 我很久不读柏杨的文章了，原因是实在吃不消他的没有格调。五年前，我写《柏杨忘恩负义了吗？》提到在他坐牢时我对他的帮助，其中说：我对柏杨的义助，主要乃基于同情与人权，而不在他是一位作家。从作家标准上看，我从来深信：凡是跟着国民党走的作家，都不足论。柏杨是跟着国民党走的作家，当然也不例外。柏杨的专精和博学训练都很差，他没有现代学问底子，作品实在缺乏深度、广度与强打度。柏杨的文字有一股格局，不外是口口声声“糟老头”啦、“赌一块钱”啦一再重复的滥套，他的存货和新货都是很贫乏的，所以只能靠耍嘴皮来做秀，谈不到深度和广度。至于强打度方面，他攻击的上限比何凡高一点，他敢攻击警察总监，于是就“三作牌”得周而复始。我真奇怪一些读者怎么受得了他那点翻来覆去的老调儿，我真怀疑这些读者的水准！杂文以外，他的历史作品写得很热闹，但是颇多错误，给他同一水平的读者看可以，给专家看就会笑，这是因为他的历史基础有问题的缘故。
@@ -2472,6 +2386,3 @@ priapism是急症，阴茎充血必要予以疏畅使损害减轻到最低；无
 历史上说“唐乌龟”，意思是唐朝“有夷狄之风，三纲不正”（《近思录》卷八）；“闺门无礼之事，不以为异”（《朱子语类》卷一三六）。其中武则天更是要角。不过，尽管武则天秽乱，还没跟自己儿子乱伦，但照柏杨说法，则儿子上床，势将难免矣！呜呼，柏杨真会拉皮条哉！
 
 1989年1月28日
-
-
-
