--- a/09.历史文化类/中国现代史定论.md
+++ b/09.历史文化类/中国现代史定论.md
@@ -1,4 +1,8 @@
-#《中国现代史定论》目录
+# 中国现代史定论
+
+<!-- toc -->
+
+## 目录
 
 * 一、周恩来上街卖报了吗？
 * 二、傅斯年论豪门资本
@@ -8,8 +12,6 @@
 * 六、将军白发征夫泪
 * 七、黄维一直未屈服？
 * 八、王仲廉人死书活
-
-
 
 周恩来上街卖报了吗？
 
@@ -34,8 +36,6 @@
 以胡扯为康宁祥贴金，岂不好笑？康宁祥以为他学到了周恩来，其实周恩来才没那样笨呢！
 
 1989年6月27日
-
-
 
 傅斯年论豪门资本
 
@@ -154,8 +154,6 @@
 有朋友问我，你说孔宋不好，张嘉璈何如？我说，何止张嘉璈，连那些“自由计划经济家”、无知低能的“民生主义哲学家”等等，都是愈弄愈糟的！我对于过去的万忍不住，对于将来，我并是“政治经济病菌学”专家。
 
 这篇文字全由我负责，与编辑无涉，另有在《世纪评论》两文（第一卷第七期、八期）可与此文参看。（《观察》第二卷第一期，1947年3月1日）
-
-
 
 谁删减了《吴铁城回忆录》？
 
@@ -287,8 +285,6 @@
 
 我另一的基本观念，认为民主政治就是政党政治。我并不因第一次行宪时的种种缺点，而对中国行宪前途感到悲观，我却担忧到有五十多年唯一革命政党历史的国民党，为了这次行宪而失去党心。因为没有国民党就没有中华民国，这是中国近代历史的事实。故我常虔诚祷告国民党能及时收拾已失的党心，把本身健全起来，继续担负起中华民国保姆的重任，使我们的国家，步上政党政治的常轨。
 
-
-
 廖耀湘殉国了吗？
 
 廖耀湘，湖南邵阳人，在长沙念完岳云中学后，人军校，是黄埔六期高材生，再留学法国。他是黄埔六期中第一个升师长的将领，第二次世界大战时打通中印公路，得青天白日勋章、美总统自由勋章、英国皇家十字勋章，是国际知名的军人。1948年，他率十一个师及一个旅，与共军作战，就是通称的“辽西战役”，由于蒋介石胡乱指挥，以至兵败被俘。1961年，中共放他出狱。1968年死去，活了六十三岁。
@@ -317,8 +313,6 @@
 
 1989年1月21日
 
-
-
 你淮海，我徐蚌
 
 1949年1月10日，一场为时六十五天的重要战役结束了。此一战役，共产党称之为“淮海战役”，国民党称之为“徐蚌会战”。这一仗打下来，国民党军队被消灭了五个兵团二十二个军，共计五十六个师（包括临阵倒戈的四个半师），五十五万人。战役的空头指挥者刘峙上将，想做文天祥，可是共产党不要他；战役的实际指挥者杜聿明将军，战败被俘，被消灭的国民党五个兵团司令官中，两个战死、两个化装逃走、一个被俘。这样一个丢人现眼的战役，使国民党元气大伤。战役结束后十一天，蒋介石宣布下野，由李宗仁就任代总统；战役结束后一百零三天，首都南京就丟了。如今，四十年过去了，今年（1989）1月10日，正是这一战役结束四十年。1月9日的军报上说，“国防部”核准为战死的第二兵团司令官邱清泉“设立衣冠冢，以慰忠魂”。人死了，连尸体都无迹可寻，只有在海天苍茫之中，以衣冠遥慰，国民党的凄凉，由此可见矣！
@@ -333,8 +327,6 @@
 
 1989年1月9日
 
-
-
 将军白发征夫泪
 
 今天（1989年1月10日）是“淮海战役”（共产党说法）或“徐蚌会战”（国民党说法）四十周年。这一战役，使南京门户大开，以致国民党放弃“首都”，“流亡”台湾，可见其重要。在战役中，国民党副总司令杜聿明战败被俘。多年以后，他偶有雪泥鸿爪式的回忆，读来颇足警世。
@@ -348,8 +340,6 @@
 事实上，据杜聿明的儿子告诉我，个中原委却是蒋介石、杜聿明师徒二人是有“密码”（秘密意思表示）的，飞机虽然来了，可是“密码”不符，飞来的关怀只是给别人看的，杜聿明是不敢登机的！杜聿明回忆：蒋介石派飞机空投，“首先下来的是近万份的黄伯韬‘烈士’纪念册！……我看蒋介石是要我死。”既然底案是要天子门生做文天祥，其他的一切，都一笑可也！
 
 1989年1月10日
-
-
 
 黄维一直未屈服？
 
@@ -366,8 +356,6 @@
 上面这一辨正，说明了台湾有李敖在，国民党是休想一手遮天的，休想！
 
 1989年3月22日
-
-
 
 王仲廉人死书活
 
@@ -428,6 +416,3 @@
 “九子五婿”，他竟以郭子仪自期呢！好个国民党郭子仪哟！国民党一介武夫，竟以文事收场，亦堪哂矣！
 
 1991年8月16日
-
-
-
