--- a/09.历史文化类/中国现代史正论.md
+++ b/09.历史文化类/中国现代史正论.md
@@ -1,4 +1,8 @@
-#《中国现代史正论》
+# 中国现代史正论
+
+<!-- toc -->
+
+## 目录
 
 * 一、青年党的历史教训
 * 二、从国民党密件看青年党
@@ -26,8 +30,6 @@
 * 二四、国民党的三通前科
 * 二五、《独立评论》疑案质疑
 
-
-
 青年党的历史教训
 
 青年党第十五届“全国”代表大会，11月26日将在台北市大专青年活动中心开幕。报上说，青年党创党人之一、现任主席李璜昨日郑重声明中国青年党只有一个，就是民国十二年在巴黎创建、现由其领导下的党。以别于谢学贤、李公权等人，组成的青年党“革新派”。由谢学贤、李公权等人所组成的青年党中央执行委员会，日前亦同时发出通知，于25日在中山堂举行青年党十五届全代会，以为抗衡。
@@ -42,8 +44,6 @@
 
 1988年11月25日
 
-
-
 从国民党密件看青年党
 
 傅斯年说搞历史要“上穷碧落下黄泉，动手动脚找东西”。这话说得不错，但是傅斯年等学阀，身居“中央研究院”历史语言研究所所长和台湾大学校长的高位，他们自己，真正在这方面的努力，却不成比例，尤其涉及国民党当道的东西，他们是不敢找的。我早就看出在国民党统治下知识分子的懦种与没出息，因此我早在二三十年前，就“自力救济”，决心发展我个人的找东西系统。年复一年的辛勤结果，我的资料，以个人收藏而言，天下第一。其间虽被警总两次抄家，但是，我像个大蟑螂，虽历经“冰河期”的浩劫，还是照样幸存、照样蔓延发展、照样“春风吹又生”。所以，国民党式的文革也对我没办法——蟑螂是不怕牛棚的。
@@ -57,8 +57,6 @@
 当年青年党大佬李璜、左舜生，犹能远处他乡，力抗堕落。最后，左舜生死了，李璜垂老投降，被收买为“总统府”资政，这样晚节不保的人，若想他能带青年党挣脱国民党的魔掌，鬼才相信他。
 
 1988年11月27日
-
-
 
 晚节不保的青年党
 
@@ -75,8 +73,6 @@
 李璜是青年党最后一个不合作的象征，他的垂老投荒，投奔国民党，真是不智。古人说“公自平生怀直气，谁能晚节负初心”，李璜的晚节不保，我真为他可惜。
 
 1982年7月4日
-
-
 
 陈立夫，你为什么不早说？
 
@@ -152,8 +148,6 @@
 
 1982年9月19日
 
-
-
 陈立夫不是CC吗？
 
 CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音第一字母C字而来。陈氏兄弟是陈英士的侄儿，陈英士又是蒋介石的把兄弟大哥，陈家两代，都跟蒋介石关系匪浅，所以鸡犬同升之后，世有“蒋家天下陈家党”之称，陈氏兄弟之炙手可热，固盛极一时也。
@@ -177,8 +171,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 古人有诗说：“上都新事常先到，老圃闲谈未易欺。”欺人之事，固不在少，但是在博读旁引下，他们想欺我们，又谈何容易啊！
 
 1988年11月20日
-
-
 
 党与法
 
@@ -360,8 +352,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 ⑧这封信是1787年12月20日写的，最精彩的句子是：“……Letmeadd,thatabillofrightsiswhatthepeopleentitledtoagainsteverygovementonearh,generalorparticular;andwhatnojustgovementshouldrefuse,orrestoninference.”见CompleteJefferson（1943）,p.121.
 
-
-
 《党与法》的重要附记
 
 《党与法》是我1964年写的，一直没有发表。十八年过去了，我发表出来，再写一点重要的附记。
@@ -377,8 +367,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 宪法有了，有了又怎样？“娘什么？老子都不老子呀！”
 
 1982年4月6日
-
-
 
 跋孙铭九给张学良和李敖的照片
 
@@ -462,8 +450,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1987年10月27日
 
-
-
 何柱国两篇《西安事变前后的张学良》书后
 
 何柱国字敬止，广西容县人。1895年（订《马关条约》那年）生。他在广东陆军小学毕业后，到湖北陆军第二预备学校、保定军官学校，再到日本士官学校，1919年毕业于第十二期骑兵科。回国后在南苑第九师见习，不久任保定军官学校骑兵科上尉教官、分队长，兼编译员。1921年，任少校队长。1922年，他投效张作霖。张作霖是最有延揽人才气度的东北人，不因何柱国是广西人就有所歧视。自此何柱国在东北军中一路青云直上：1922年任陆军讲武堂少校战术教官，兼骑兵科术科主任；1923年升中校，改任队长；1924年榆关战役，任第十三联军司令部作战科主任参谋和空陆侦察及第一线部队作战之指导。战事结果，因功晋级上校；1925年任苏皖宣武军第三军司令部作战科长，复调东北讲武堂战术教官。不久复任苏皖鲁剿匪司令部作战科长、安徽督办公署参谋主任、东北陆军第一百二十七团团长、四十五团团长等职。以后又以战功，升任三十七旅少将旅长、二十三师师长等职；1928年军队缩编，任东北陆军第三旅中将旅长，不久又任骑兵军军长；1931年任榆关警备司令。这年九一八事变，东北沦陷，何柱国转战长城。在东北军中，地位举足轻重。
@@ -514,8 +500,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1988年3月2日晨2至6时
 
-
-
 王家桢回忆张学良两篇文章书后
 
 王家桢字树人，吉林省双城县人。他生在1899年，就是清朝光绪二十五年，也就是义和团开始闹事那年。他是莫德惠的外甥，日本庆应大学理财科毕业。回国后，先做吴佩孚的秘书、北京政府交通部法律编辑局书记官。吴佩孚垮台后，改做张作霖大元帅府秘书、外交部秘书、东北边防军司令长官公署外交机要处主任。张作霖被炸死，张学良任东北保安总司令时，他做东北保安总司令部的外交处长。换句话说，他是张学良外交事务的头儿，极得张学良的信任。张学良和南京国民党政府达成协议后，王家桢在1930年出任外交部常务次长、国际联盟中国代表。随着张学良的被蒋介石欺骗、随着东北系处境的式微，王家桢的宦途也今非昔比。抗战期中，他做国民参政员、做外交部顾问，已是闲职。抗战胜利后，出任东北行辕政治委员兼东北生产管理局局长。大陆丢掉前留在上海，投共而去。
@@ -536,8 +520,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1988年3月31日晨
 
-
-
 《张学良研究》前言
 
 张学良生在1898年，今年1988年，九十岁了。九十年间，他从三十八岁起就失掉自由，被关五十二年至今，论使爱国者失掉自由之久，蒋介石及其党羽可谓心狠手辣、空前绝后。德国爱国者赫斯（RudolfHess）被判无期徒刑，也不过失掉自由四十六年，但赫斯九十三岁时自杀于狱，被判十年早已过期却仍在关个不停的张学良年登九十，正皈依上帝以求永生，如今在失掉自由五十二年之后，发表公开信说他“怡然自得，深足自慰”“日常生活行动，一向自由”云云，事实上，他“日常生活行动”的“一向自由”，只是他和他夫人老两口的游山玩水逛街吃小馆而已，他和人的交往绝对没有自由，据我所知，只有张群、张大千、王新衡、何世礼四人，可以和他交往，如今张群已老，张大千、王新衡已死，他唯一的交往者，只是他以前的随从参谋何世礼将军而已。何世礼将军住我楼下，人又多在香港，前一阵张学良一周内一连两次到何家，其索寞可想！
@@ -556,8 +538,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1988年3月31日午东北吉林省扶余县李敖写于台湾
 
-
-
 《张学良研究续集》前言
 
 蒋介石是现代中国最阴狠卑鄙的坏蛋，他一生中害了无数的同胞与同志，或杀或关、或辱或骗……在这些史迹与血迹中，有一件最突出的例子，就是他对张学良的阴狠卑鄙。这种阴狠卑鄙，项目繁多，大者有二：第一是诬张学良，使张学良一直背黑锅；第二是关张学良，使张学良一直不自由。
@@ -569,8 +549,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 6月22日国民党《中央日报》登美国《波士顿通讯》的社论，说：“在重新追究这些旧案时，首应尊重当事人的意愿。如果当事人对往事已心安理得，或不愿旧事重提，则又何需他人去吹皱一池春水。”这全是无耻的话，也是不通的话。人间真相与不义，“他人”岂能因当事人的缄默就一同缄默了吗？至少我李敖不是这种“他人”，我特此再来一本《张学良研究续集》，就是要吹皱一池春水！
 
 1988年6月27日
-
-
 
 西安事变五十二年了！
 
@@ -585,8 +563,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 西安事变五十二年了。五十二年后，我们还能拜张学良长寿之赐，得看国民党的种种洋相，真是有趣极了。
 
 1988年12月17日
-
-
 
 张学良心事探微
 
@@ -768,8 +744,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 35.于衡：《张学良访问记》（《联合报》，1981年9月18日）
 
-
-
 别窝囊张学良了！
 
 张学良先生五十四年来公开露面于九秩大庆中，有人说西安事变过了半世纪，没有反哪有平；有人说张学良受尽委屈，公开祝寿应算平反；有人说人已自由没有平反问题；有人说党政要员齐为张学良祝寿，显然当局已有平反意味；有人说今天是欢乐收场，当然是平反。……大体说来，人们对张学良先生是同情的、肯定的、补偿的，虽然，五十四年后才有这样“公道自在人心”的公开表示，真令人不能不感慨于公道何迟！
@@ -785,8 +759,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 如今以“悔祸”“悔悟”说张学良先生，是根本曲解了张学良先生一生的志事与苦心，也与历史真相不符。张学良先生自己看破红尘，不愿置辩是一回事，但我们这些学历史的人，却忍不住要在这关键解释上，代为辨正。两年前张学良先生以公开信说他“日常生活行动，一向自由”“怡然自得，深足自慰”，当我们看《双城记》，看到那“北塔105号”老囚犯出狱后，还要靠人在房门外上锁，才能觉得自由自得与自慰的画面，我们除了悲悯，还能苛责什么？但两年前张学良先生引保罗之言，“忘记背后，努力面前的”，到今天再引保罗之言，“在罪人中我是个罪魁”，在在都表明了他的宗教层次而非政治层次，电视中说张学良自承是民族罪人，显然也是误解。张学良先生是伟大的爱国者，他无过可悔、无罪可言，希望人们别再用这种字眼羞辱张学良了！今天的张学良，已经久囚成“惯”犯，并且信教入迷，够窝囊了，人们再曲解西安事变来窝囊他，未免太不公道了，我实在看不过去，特投文海外侨报以申正义，并谴责国民党大员与报刊的鬼蜮伎俩！
 
 1990年6月2日
-
-
 
 张学良关于西安事变的谈话
 
@@ -916,8 +888,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1990年6月7日
 
-
-
 张学良不该再含蓄了！
 
 《联合报》报道日本国家电视台（NHK）独家访问张学良的节目，其中有重要的一段如下：
@@ -937,8 +907,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 陈立夫《参加抗战准备工作之回忆》一文中说，张学良“期以‘不抵抗将军’之头衔，转加诸中央领袖，终致造成西安事变”。这一说法，应是西安事变发生的原因之一。显然的，西安事变前，张学良对背了五年的黑锅，已经不愿再背，所以弄出西安事变。不料事变后，他更没澄清机会了’不但没机会卸下以前的黑锅，反倒又加上许多新黑锅！如今他以长寿换得清白的机会，已经到来，他不该再含蓄了！
 
 1990年12月11日
-
-
 
 吁请张学良先生
 
@@ -967,8 +935,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 张学良先生是现代中国最伟大的民族英雄，一生爱国之殷、任事之勇、受谤之烈、遭际之惨，古今中外，皆无甚匹。我们深盼望张学良先生不负初心，以平生直气，“乞与人间留纪录”。我们再请张学良先生三思，考虑我们的呼吁。
 
 1991年3月1日
-
-
 
 张学良欲说还休了哪些话？
 
@@ -999,8 +965,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 1991年3月1日
 
-
-
 “扬眉”不够，“吐气”才算
 
 ——送张学良序
@@ -1018,7 +982,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 张学良先生一代豪杰，我们盼他“此度见花枝，白头誓不归”，最后用行动、用真言，为他自己吐一口气，为自己吐气就是为人间正义吐气。当年韩昌黎写《送孟东野序》，首言“物不得其平则鸣……人之于言也亦然”，未言“有若不释然者，故吾道其命于天者以解之”——上帝的道理也是要伸张天讨的，张学良先生笃信上帝，只肯“扬眉”而不“吐气”，此非上帝之道也，愿张学良先生勉之！
 
 1991年3月11日
-
 
 张学良为杨拯民题词
 
@@ -1039,8 +1002,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 现在大陆已成立杨虎城将军纪念馆，张学良如回大陆，自当对杨虎城有以个别纪念。“故人舍我闭黄壤”，那种黄壤，可真闭得“无脸见人”啊！
 
 1991年4月5日
-
-
 
 长叹犹怜张先生
 
@@ -1075,8 +1036,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 张学良自己写了一首小歌说：“顶天立地男子汉，磊落光明度余年。”他本人的确“顶天立地”、的确“磊落光明”，但是，他的“余年”，却愈度愈令我们着急了。也许，他少说几句、少跑几个地方，像过去一般度着幽居岁月，才更像我们期望于他的“男子汉”吧？
 
 1991年6月28日午
-
-
 
 龚忠武的《少帅纽约行有感》
 
@@ -1153,8 +1112,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 如今，六十年过去了，君武诗去，忠武诗来，张学良依然是张学良，但已不胜今昔之感，他既令我们敬仰、同情，又令我们失望。忠武诗中第二句，我本建议改为“国仇家恨去他娘”的，虽是神来之笔，然却失敬之至，自为忠武所不取也。
 
 1991年7月1日上午
-
-
 
 国民党的三通前科
 
@@ -1376,8 +1333,6 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 
 ⑥其他资料当然还多得很哪！通商内容也不限于中药。1983年5月1日《财经时事》就报道台湾“中国人造纤维公司”卖货给“北京中国蚕丝公司”的事，卖的是人造丝。可见所谓不“通商”，是掩耳盗铃耳！
 
-
-
 《独立评论》疑案质疑
 
 陈之迈《纪念适之先生》〈《传记文学》一卷二）
@@ -1454,6 +1409,3 @@ CC是国民党中的大派系，是由陈果夫、陈立夫兄弟的英文拼音
 ①时候记不清,只记得那是穿夹衫的季节。
 
 ②这段事可以表现胡适之先生之为人，是那样的谦和。同时亦可见二十九军的一班朋友和同志是那样的虚心。又警察局长是陈希文先生，本文前面已提到他了。
-
-
-
