--- a/09.历史文化类/中国艺术新研.md
+++ b/09.历史文化类/中国艺术新研.md
@@ -1,4 +1,8 @@
-#《中国艺术新研》目录
+# 中国艺术新研
+
+<!-- toc -->
+
+## 目录
 
 * 一、中国艺术史一个断层的重建
 * 二、《周越墨迹研究》序
@@ -8,9 +12,7 @@
 * 六、李敖所藏中国美术精品图说
 * 七、许地山论书法
 
-
-
-中国艺术史一个断层的重建
+## 中国艺术史一个断层的重建
 
 ——周越墨迹研究
 
@@ -320,9 +322,7 @@
 
 (32)本论文之成，最早是台湾大学艺术史研究所所长石守谦到我家“拜观”周越真迹，惊叹赞美之下，建议我写出的。我在1992年9月14日，粗成《周越真迹说明》，约七千字，送给史学家汪荣祖留副。两年来，我忙于杂务，承蒙好友陈兆基代劳，为我遍访图书馆，代查史料，用力独多，在兆基和我分头努力下，我于1994年7月5日增订此论文，并改题《记一件火中复出的千年历史墨迹》，约一万五千字。七个月来，兆基和我又续有所得，我乃再行增补，改题今名，约一万八千字。并由荣祖代劳，译成英文摘要。临文之末，特志原委如上，一来不没友人之功、二来表示我的感谢。此文没有兆基辛苦代访各图书馆，绝无今日成绩，我对兆基说：“这篇文章可说是我们两人合写的。”其理在此。
 
-
-
-《周越墨迹研究》序
+## 《周越墨迹研究》序
 
 中国几千年历史中，每逢兵燹、灾变、祸乱，生灵固然涂炭、文物亦遭浩劫。隋朝牛弘曾提出“五厄”之说，明朝胡应鳞又补充五次，成了“十厄”。胡应麟死在17世纪初年，三百年来，兵燹、灾变、祸乱，也不在少，“十厄”以外，再来新厄，自不待言，光在杨仁恺先生《国宝沉浮录》一书中，我们便可触目惊心了。
 
@@ -1276,21 +1276,21 @@
 
 (11)同⑥，卷一四五，第3496页。
 
-(12)[清]陆增祥，《八琼室金石补正》（台北：文海出版社，1967），卷一〇四，第1750页。
+[12](清)陆增祥，《八琼室金石补正》（台北：文海出版社，1967），卷一〇四，第1750页。
 
-(13)[宋]朱长文，《墨池编》，卷一〇。收入于《中国书画全书》第一册（上海：上海书画出版社，1992），第289页。
+[13](宋)朱长文，《墨池编》，卷一〇。收入于《中国书画全书》第一册（上海：上海书画出版社，1992），第289页。
 
-(14)[宋]米芾，《书史》。收入于《中国书画全书》第一册，第974页。按《我太宗秘阁图书之印》有些版本作“我太祖秘阁图书之印”，后者应有误，按“秘阁”建于太宗端拱元年（988），藏三馆真本书籍及书画。故米芾所言的“秘阁图书”“上阁图书”二印应指宋太宗之印。
+[14](宋)米芾，《书史》。收入于《中国书画全书》第一册，第974页。按《我太宗秘阁图书之印》有些版本作“我太祖秘阁图书之印”，后者应有误，按“秘阁”建于太宗端拱元年（988），藏三馆真本书籍及书画。故米芾所言的“秘阁图书”“上阁图书”二印应指宋太宗之印。
 
 (15)《宋会要-职官》十八之四十七：“太宗端拱元年5月，诏就崇文院中堂建秘阁，择三馆真本书籍万余卷及内出古画、墨迹藏其中。凡史馆先贮天文、占候、谶纬、方术书五千一十二卷，图书百四十轴，尽付秘阁。”（台北：世界书局，1964），第2764页。
 
-(16)[宋]钱惟演，《玉堂逢辰录》，收入《笔记小说大观》三十八编五册（台北：新兴书局，1985），第1页。
+[16](宋)钱惟演，《玉堂逢辰录》，收入《笔记小说大观》三十八编五册（台北：新兴书局，1985），第1页。
 
 (17)《宋史-艺文志》，卷二〇二，第5088页。
 
 (18)有关宋代度量衡资料，详见郭正忠《3-14世纪中国的权衡度量》（北京：中国社会科学出版社，1993），第255-312页。
 
-(19)[宋]王应麟，《玉海》（上海：江苏古藉出版社，上海书局，1988），卷一六八，第3081页。
+[19](宋)王应麟，《玉海》（上海：江苏古藉出版社，上海书局，1988），卷一六八，第3081页。
 
 (20)台湾故宫博物院，《石渠宝笈续编》（台北：故宫博物院，1971），第五册，第2656页。
 
@@ -1298,7 +1298,7 @@
 
 (22)同③，卷四六五，第22589页。
 
-(23)[宋]欧阳修，《集古录》，卷七，见《欧阳修全集》（台北：世界书局，1961），第1177页。
+[23](宋)欧阳修，《集古录》，卷七，见《欧阳修全集》（台北：世界书局，1961），第1177页。
 
 (24)同(13)，第974页。
 
@@ -1310,39 +1310,39 @@
 
 (28)中国古代书画鉴定组编，《中国古代书画图目》第三册（北京：文物出版社，1987），第19页。
 
-(29)[清]高士奇，《江村销夏录》（台北：汉华文化事业股份有限公司，1971），卷二，第185-191页。
+[29](清)高士奇，《江村销夏录》（台北：汉华文化事业股份有限公司，1971），卷二，第185-191页。
 
-(30)[宋]桑世昌，《兰亭考》，收入于《中国书画全书》第二册，第609页。
+[30](宋)桑世昌，《兰亭考》，收入于《中国书画全书》第二册，第609页。
 
-(31)[明]吴升，《大观录》（台北：汉华文化事业股份有限公司，1970），卷三，第283-285页。
+[31](明)吴升，《大观录》（台北：汉华文化事业股份有限公司，1970），卷三，第283-285页。
 
-(32)[宋]无名氏，《道山清话》，收入《笔记小说大观》八编五册（台北：新兴书局，1975），第2845-2846。
+[32](宋)无名氏，《道山清话》，收入《笔记小说大观》八编五册（台北：新兴书局，1975），第2845-2846。
 
-(33)[元]虞集，《徽政院使张忠献公神道碑》《道园学古录》，卷一七。收入《景印文渊阁四库全书》第一二〇七册（台北：商务印书馆，1983），第242页。
+[33](元)虞集，《徽政院使张忠献公神道碑》《道园学古录》，卷一七。收入《景印文渊阁四库全书》第一二〇七册（台北：商务印书馆，1983），第242页。
 
 (34)史书关于张金界奴之记载相当有限，只有寥寥数语。参见《元史-张九思传》，卷一六九，第3981页。以及柯绍忞，《新元史-张九思传》（北京：中国书店，1988），卷一八六，第754页。
 
-(35)[清]王梓材、冯云濠辑，《宋元学案补遗》（台北：新文丰出版公司，1988），卷九二，第99页。
+[35](清)王梓材、冯云濠辑，《宋元学案补遗》（台北：新文丰出版公司，1988），卷九二，第99页。
 
-(36)[明]尹梓等纂修，《丰县志》（国家图书馆藏隆废三年刊万历间增补本），第41页。
+[36](明)尹梓等纂修，《丰县志》（国家图书馆藏隆废三年刊万历间增补本），第41页。
 
 (37)由《王著千文》后欧阳玄跋末题“跋袁侍御亨伯家所见，至正丁酉七月初吉”此句，得知袁涣于此年担任御史台侍御史。
 
-(38)[明]宋濂，《元故国子监祭酒孔公神道碑》中云：“（至正）十九年……公（孔克坚）及中丞袁涣诤曰……，涣亦被劾去。”见《宋学士文集》（台北：商务印书馆，1965），卷六八，第1083页。
+[38](明)宋濂，《元故国子监祭酒孔公神道碑》中云：“（至正）十九年……公（孔克坚）及中丞袁涣诤曰……，涣亦被劾去。”见《宋学士文集》（台北：商务印书馆，1965），卷六八，第1083页。
 
 (39)以上四条见《元史-宰相年表》，卷一一三，第1858、1859、1860、2862页。
 
-(40)[明]权衡编辑，《庚申外史》卷一记载曰：“丁未，至正二十七年，扩廓增兵入关，……朝廷因差左丞袁涣，及知院安定臣中丞明安帖木儿传旨，令两家息兵罢攻，各率所部，共清江淮。”由此知袁涣此年仍居中丞位。收入《笔记小说大观》四编四册（台北：新兴书局，1974），第2490页。
+[40](明)权衡编辑，《庚申外史》卷一记载曰：“丁未，至正二十七年，扩廓增兵入关，……朝廷因差左丞袁涣，及知院安定臣中丞明安帖木儿传旨，令两家息兵罢攻，各率所部，共清江淮。”由此知袁涣此年仍居中丞位。收入《笔记小说大观》四编四册（台北：新兴书局，1974），第2490页。
 
 (41)同(33)。按宋濂于神道碑碑文中指出在洪武三年（1370），孔克坚卒；十年后，其子孔希学以袁涣之状来请宋濂为其父撰写神道碑文，故可知至洪武十三年，袁涣仍在世。
 
-(42)[元]欧阳玄，《永新龙母吴氏墓铭》，《圭斋文集》卷十。收入《四库全书》第一二一〇册，第125页。
+[42](元)欧阳玄，《永新龙母吴氏墓铭》，《圭斋文集》卷十。收入《四库全书》第一二一〇册，第125页。
 
-(43)[明]陶宗仪，《书史会要》，卷七。收入《中国书画全书》第四册，第61页。
+[43](明)陶宗仪，《书史会要》，卷七。收入《中国书画全书》第四册，第61页。
 
 (44)那志良，《项子京及其印章》，《大陆杂志》十三卷八期，第22-26页。
 
-(45)[明]姜绍书，《韵石斋笔谈》，卷下。收入《笔记小说大观》二十二编五册（台北：新兴书局，1978），第2748页。
+[45](明)姜绍书，《韵石斋笔谈》，卷下。收入《笔记小说大观》二十二编五册（台北：新兴书局，1978），第2748页。
 
 (46)同上。
 
@@ -1350,21 +1350,21 @@
 
 (48)同上，第84页。
 
-(49)[清]吴其贞，《书画记》（上海：人民美术出版社，1963），卷三，第319页。
+[49](清)吴其贞，《书画记》（上海：人民美术出版社，1963），卷三，第319页。
 
 (50)同上，第325-326页。
 
 (51)关于高道素、高承埏父子二人生平，可参考清修《嘉兴府志》（台北：成文书局，1970），卷五一，第49-50、53-54页。
 
-(52)[清]朱彝尊，《前进士高公墓表》《曝书亭乐》，卷七二。收入于《四库全书》第一三一八册，第456页。
+[52](清)朱彝尊，《前进士高公墓表》《曝书亭乐》，卷七二。收入于《四库全书》第一三一八册，第456页。
 
-(53)[清]朱赛尊，《静志居诗话》，卷一九。收入《明代传记丛刊》第十册（台北：明文书局，1991），第44页。
+[53](清)朱赛尊，《静志居诗话》，卷一九。收入《明代传记丛刊》第十册（台北：明文书局，1991），第44页。
 
-(54)[清]朱辰应，《高承埏传》，《国朝耆献类征初编》，卷四六一。收入《淸代传记丛刊》第一八七册（台北：明文书局，1985），第344页。
+[54](清)朱辰应，《高承埏传》，《国朝耆献类征初编》，卷四六一。收入《淸代传记丛刊》第一八七册（台北：明文书局，1985），第344页。
 
 (55)同①，第72页。
 
-(56)[清]安岐，《墨缘汇观》（江苏：江苏美术出版社，1992），第1-2页。
+[56](清)安岐，《墨缘汇观》（江苏：江苏美术出版社，1992），第1-2页。
 
 (57)同(16)第2655页。
 
@@ -1380,7 +1380,7 @@
 
 (63)同①，第69页。
 
-(64)[明]顾复，《平生壮观》（上海：人民美术出版社，1962），卷二，第页。
+[64](明)顾复，《平生壮观》（上海：人民美术出版社，1962），卷二，第页。
 
 (65)同(27)。
 
@@ -1390,13 +1390,13 @@
 
 (68)《宣和书谱》，卷一九。收入《中国书画全书》第二册，第56页。
 
-(69)[宋]苏轼，《六观堂老人草书诗一首》，《苏东坡全集》（台北：世界书局，1974），第466页。
+[69](宋)苏轼，《六观堂老人草书诗一首》，《苏东坡全集》（台北：世界书局，1974），第466页。
 
-(70)[宋]黄庭坚，《跋周子发帖》《山谷题跋》，卷九。收入《中国书画全书》第一册，第720页。
+[70](宋)黄庭坚，《跋周子发帖》《山谷题跋》，卷九。收入《中国书画全书》第一册，第720页。
 
 (71)同(63)。
 
-(72)[宋]米芾《海岳名言》。
+[72](宋)米芾《海岳名言》。
 
 (73)同(56)。
 
@@ -1404,23 +1404,23 @@
 
 (75)同(65)。《跋与徐德修草书后》，卷六，第689页。
 
-(76)[明]张丑，《真迹日录》。收入《中国书画全书》第四册，第415页。
+[76](明)张丑，《真迹日录》。收入《中国书画全书》第四册，第415页。
 
-(77)[宋]苏轼。《评草书》《东坡题跋》，卷四。收入《中国书画全书》第一册，第629页。
+[77](宋)苏轼。《评草书》《东坡题跋》，卷四。收入《中国书画全书》第一册，第629页。
 
-(78)[宋]米芾，《画史》。收入《中国书画全书》第一册，第983页。
+[78](宋)米芾，《画史》。收入《中国书画全书》第一册，第983页。
 
-(79)[宋]陆游，《老学庵笔记》，卷二，第21页。见《陆放翁全集》（台北：世界书局，1961）。
+[79](宋)陆游，《老学庵笔记》，卷二，第21页。见《陆放翁全集》（台北：世界书局，1961）。
 
 (80)同(63)。
 
 (81)于敏中语。
 
-(82)[清]冯班，《钝吟书要》，收入《清人书学论著》（台北：世界书局，1962），第3-4页。
+[82](清)冯班，《钝吟书要》，收入《清人书学论著》（台北：世界书局，1962），第3-4页。
 
-(83)[宋]张邦基，《墨庄漫录》，收入《笔记小说大观》第二十二编二册（台北：新兴书局，1978），卷一〇，第823页。
+[83](宋)张邦基，《墨庄漫录》，收入《笔记小说大观》第二十二编二册（台北：新兴书局，1978），卷一〇，第823页。
 
-(84)[宋]蔡襄，《观宋中道家藏书画》，《端明集》，卷二。收入《四库全书》第一〇九〇册，第356页。
+[84](宋)蔡襄，《观宋中道家藏书画》，《端明集》，卷二。收入《四库全书》第一〇九〇册，第356页。
 
 (85)同(13)，第975页。
 
@@ -1434,35 +1434,35 @@
 
 (90)同(72)。《杂评》，卷四，第630页。
 
-(91)[清]刘熙载，《书概》《艺概》（台北：广文书局，1964），卷五，第16页。
+[91](清)刘熙载，《书概》《艺概》（台北：广文书局，1964），卷五，第16页。
 
-(92)[宋]欧阳修，《笔说》。见《欧阳修全集》，第1046页。
+[92](宋)欧阳修，《笔说》。见《欧阳修全集》，第1046页。
 
-(93)[宋]葛立方，《韵语阳秋》，卷一四。收入《笔记小说大观》四十三编三册（台北：新兴书局，1986），第787页。
+[93](宋)葛立方，《韵语阳秋》，卷一四。收入《笔记小说大观》四十三编三册（台北：新兴书局，1986），第787页。
 
-(94)[宋]刘克庄，《后村先生大全集》，卷一〇四。收入《四部丛刊正编》第六十二册（台北：商务印书馆，1979）。第905页。
+[94](宋)刘克庄，《后村先生大全集》，卷一〇四。收入《四部丛刊正编》第六十二册（台北：商务印书馆，1979）。第905页。
 
 (95)同(87)。
 
 (96)同(12)。
 
-(97)[宋]黄伯思，《东观余论》，收入《中国书画全集》第一册，第898、890页。
+[97](宋)黄伯思，《东观余论》，收入《中国书画全集》第一册，第898、890页。
 
-(98)[宋]李弥逊，《筠谿集》，卷二一。收入《四库全书》第一一三〇册，第793页。
+[98](宋)李弥逊，《筠谿集》，卷二一。收入《四库全书》第一一三〇册，第793页。
 
 (99)同⑩。
 
-(100)[宋]陈睽等编，《中兴馆阁书目》。收入于《书目类编》第一册（台北：成文出版社，1978），第167页。此书编于宋孝宗淳熙五年（1178）。
+[100](宋)陈睽等编，《中兴馆阁书目》。收入于《书目类编》第一册（台北：成文出版社，1978），第167页。此书编于宋孝宗淳熙五年（1178）。
 
-(101)[宋]晁公武，《郡斋读书志》（台北：广文书局，1979），卷四，第436页。
+[101](宋)晁公武，《郡斋读书志》（台北：广文书局，1979），卷四，第436页。
 
 (102)同(74)。卷一〇，第64页。
 
-(103)[宋]陈振孙，《直斋书录解题》（上海：上海古籍出版社，1987），卷一四，第407页。
+[103](宋)陈振孙，《直斋书录解题》（上海：上海古籍出版社，1987），卷一四，第407页。
 
 (104)同(89)。
 
-(105)[宋]陈槱，《负暄野录》，卷上。收入《中国书画全书》第二册，第647页。
+[105](宋)陈槱，《负暄野录》，卷上。收入《中国书画全书》第二册，第647页。
 
 (106)同(19)，卷四五，第849页。
 
@@ -1478,13 +1478,11 @@
 
 (112)据《赵魏公楷书洛神赋》后袁泰跋语，书于至治三年（1323）。见《郁氏书画题跋记》，卷八之著录，收入《中国书画全书》第四册，第729-730页。
 
-(113)[元]陶宗仪，涵芬楼百卷本《说郛》（台北：商务印书馆，1972），据涵芬楼藏明钞本影印，卷七八，第1125页。
+[113](元)陶宗仪，涵芬楼百卷本《说郛》（台北：商务印书馆，1972），据涵芬楼藏明钞本影印，卷七八，第1125页。
 
 (114)宛委山堂百二十卷本《说郛》，据台大图书馆藏清顺治三年（1646）李际期宛委山堂刊本，卷八六。与《四库全书》本相互对照，第八八一册，第37-38页。
 
-
-
-台湾“故宫”博物院乃是“故宫”赃物院
+## 台湾“故宫”博物院乃是“故宫”赃物院
 
 大陆国家文物局局长张德勤4月29日表示，海峡两岸的交流可从不存在意识形态和政治敏感争议的文化交流着手，将海峡两岸故宫博物院的交流推动起来，即北京、台北故宫博物院收藏的古物相互举行文物交流展览，及大陆新近出土的古文物如兵马俑的去台湾展览。
 
@@ -1498,9 +1496,7 @@
 
 1991年5月1日
 
-
-
-质询秦孝仪先生
+## 质询秦孝仪先生
 
 一、“故宫博物院”迄今收藏文物高达六十四万六千两百一十三件，因限于场地，展出件数有限，贵“院长”为何不积极设法展出中国自家宝物，反倒提供时空人力财力展出外国艺品？舍己之田而耘人之田，理由为何？请详予说明。
 
@@ -1544,9 +1540,7 @@
 
 1994年4月8日代立委谢聪敏作
 
-
-
-《冒巢民董小宛夫妇合璧卷真迹神品》说明
+## 《冒巢民董小宛夫妇合璧卷真迹神品》说明
 
 《清史稿-遗逸传》中有冒襄传，全文如下：
 
@@ -1600,9 +1594,7 @@
 
 1995年1月5日夜2时
 
-
-
-李敖所藏中国美术精品图说
+## 李敖所藏中国美术精品图说
 
 文徵明（1470-1559）原名壁，字徵明，以字行。改字徵仲，号衡山、衡山居士。长洲（苏州）人。他与沈周、唐寅（伯虎）、仇英合称为“吴门四家”。唐伯虎与他同岁，但唐伯虎五十四岁就死了，他却多活了三十六年，活到九十岁，成就自然更多。此公能写能画，《明史》说：“四方乞诗文书画者，接踵于道，而富贵人不易得片楮。……外国使者道吴门，望里肃拜，以不获见为恨。文笔遍天下，门下士赝作者颇多，徵明亦不禁。”——这种气派和气度，成就了他的江海之大。他临死前还为御史严杰的母亲写墓志，写完了，“掷笔而逝”。活得潇洒也死得潇洒。
 
@@ -1722,9 +1714,7 @@
 
 庄严（1899-1980）字尚严，号慕陵，又号六一翁。江苏武进人，生在北京，无异北京人。他在北京大学毕业后，即参与清室善后委员会清点故宫文物，“宣统出宫我入宫”，结果自故宫博物院古物馆科长，直干到副院长，一干四十五年，做了一辈子的守藏吏。庄严与李敖父亲北大同学、庄严太太与李敖母亲同学、庄严儿子又与李敖同学，三路世交，亦属罕见。在李敖中学时代，庄严给李敖写过许多信、写过一些字，其中一幅，是以宋徽宗“瘦金书”体写南唐李后主词。——以亡国之君的字写亡国之君的词，如此组合，亦属罕见。庄严八十二岁死去，这一墨迹，可谓慕陵散了。
 
-
-
-许地山论书法
+## 许地山论书法
 
 许地山是博学的台湾人，他生于1893，生在台南马公庙。生后第二年就逢甲午战争，中国割了台湾，他的父亲不愿受日本人统治，带他回到祖国。长大后，留英回来，在燕京、清华、北大、中山、港大等校任教，1941年死去。
 
@@ -1737,6 +1727,3 @@
 这位一直在名大学中文系执教的学者，竟有上面这些脱俗之言，真可佩服。
 
 1991年4月9日
-
-
-
