--- a/09.历史文化类/中国近代史新论.md
+++ b/09.历史文化类/中国近代史新论.md
@@ -1,4 +1,8 @@
-#《中国近代史新论》目录
+# 中国近代史新论
+
+<!-- toc -->
+
+## 目录
 
 * 一、利玛窦和近代西学的东传
 * 二、惨刑与迫害
@@ -18,8 +22,6 @@
 * 十六、谁忠谁奸
 * 十七、《全盘西化的理由》前记
 * 十八、《中国近代史论集》序例
-
-
 
 利玛窦和近代西学的东传
 
@@ -209,8 +211,6 @@
 
 1964年
 
-
-
 惨刑与迫害
 
 ——汤若望等的苦斗
@@ -382,8 +382,6 @@
 这很明显的指出“宁可使中国无好历法，不可使中国有西洋人”的理由，但是这种理由，又怎么能阻止西潮的东来呢？
 
 1964年
-
-
 
 西化史的一章
 
@@ -607,8 +605,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 1964年
 
-
-
 祖法和历法
 
 一个民族，在受到外来新奇文明的冲击的时候，都难免产生误会和抵制，即使被一个优势文明冲击的时候，落后文明仍然会有反动和阻力，何况中国民族本在文化上有着历史的基础，产生的反动和阻力，自然也就更大了。
@@ -637,8 +633,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 这些“妄干天道”“玩侮中国”“毁尧舜相传之仪器”等论据，就是旧历维护者们的脆弱理由。当他们在事实上，再也抬不出优势的历法来抵抗的时候，他们便抬出祖宗，实行祖宗战。杨光先在和西洋人斗历法失败后，公然主张：“宁可使中国无好历法，不可使中国有西洋人！”斗法斗到这种程度，斗的是气，不是法了。以这种心态反对西化，又怎么不一败涂“天”呢？
 
-
-
 中国式谈判
 
 13世纪，蒙古的世纪。蒙族向南发展，灭亡了中国华北的满（女真）族金朝和华南的汉族宋朝。又向西发展，越过了中央亚细亚、俄罗斯，直到波兰。当时的“黄祸”不但白种人遭殃，黄种人也一样。蒙古的“黄祸”，在中国色泽鲜明，但是为时短暂，经过了十个皇帝，就被汉族赶走，延续不到一百年，在俄罗斯的“黄祸”，颜色较淡，却拖到16世纪才清洗干净。
@@ -666,8 +660,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 从此中国与俄国有了一百五十年的和平。中国人得到足够的时间，面朝南方，去把自己的帝国腐化。
 
 1984年5月5日改定旧稿
-
-
 
 一页与老毛子的外交史
 
@@ -905,8 +897,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 1964年
 
-
-
 被拆穿的纸龙
 
 清朝的乾隆皇帝在位时间是六十年（1736—1796），贯串了18世纪。在这个阶段，正是西方大变化的时期。其中包括了英法两国在欧、亚、美三洲殖民地的竞争，包括了美国的立国、包括了法国的大革命，并且，在这个世界上，发明了蒸汽机，造成了工业革命的基本动力。
@@ -969,8 +959,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 四十七年以后，英国竟用一万五千名军队，放弃了一切平等谈判的方法，与这个“老大帝国”直接诉诸武力，并且打败了这个“老大帝国”。它的敢于如此“猖狂”，其中一个主要远源，自然得力于马嘎尔尼的报告。
 
-
-
 此非彼辈所能知也！
 
 鸦片战争以后，中国的有识之士，开始觉悟到西方的现代文明才是中国的真正威胁。这种觉悟，首先是从西方的船坚炮利开始的。鸦片战争的“祸首”林则徐在被发往新疆“效力赎罪”①的时候，写信给一个朋友，指出西方的大炮太厉害，我们的打不到他们，他们的已打到我们，不但打到我们，还放得比我们快。若没有这种大炮，就是古代名将岳飞韩世忠来，也没办法；百万大军，也没办法。并且中国军人打仗，要面对面，看到敌人才好打，如今敌人面都见不到，就打起来，战场老兵也没听说过②。他这种远见，已经明明看出中国武器的不行。但他虽然看出这种危机，却不敢公开说，只能偷着喊：“令岳韩束手，奈何！奈何！”最后结果是，没有人大声疾呼，中国没有改变。
@@ -995,8 +983,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 ④薛福成有这样的记录有合肥人，刘姓，尝在胡文忠公麾下为戈什哈，尝言楚军之图安庆也，文忠曾往视师。策马登龙山，瞻眄形势，喜曰：‘此处俯视安庆，如在釜底，贼虽强，不足平也。’既复驰至江滨，忽见二洋船，鼓轮西上，迅如奔马，疾如飘风；文忠变色不语，勒马回营，中途呕血，几至堕马。文忠前已得疾，自是益笃，不数月，薨（胡林翼死在咸丰十一年，1861，就是英法联军追入北京之后一年）。盖粤贼之必灭，文忠已有成算：及见洋人之势方炽，则膏盲之症，着手为难，虽欲不优，而不可得矣！阎丹初尚书，向在文忠幕府，每与文忠论及洋务，文忠辄摇手闭目，神色不怡者久之，曰：‘此非吾辈所能知也！’”
 
-
-
 《末代皇帝研究》前言
 
 溥仪，姓爱新觉罗，字浩然，英文名亨利（Henry），笔名植莲，满洲正黄旗人。后来的籍贯填的是北京，事实上是辽宁新宾县人。清光绪三十二年正月十四日（1906年2月7日），生在北京醇王府。他是道光皇帝第七个儿子醇贤亲王奕環的孙子、第二代醇亲王载沣的长子，他的生母苏完瓜尔佳氏是荣禄的女儿。
@@ -1010,8 +996,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 正因为溥仪此人的象征意义，真是古之所无、今之绝有，所以我编出这本书，以存信史、以昭来兹。虽然末代皇帝已进人历史，但是这一历史，却正是未来的新页。——会读书的人，必然能在这本书中找到他的新页。
 
 1988年6月30日
-
-
 
 史坚如和他的口供真相
 
@@ -1037,8 +1021,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 1988年3月10日
 
-
-
 北京召开“辛亥革命烈士彭家珍学术研讨会”志感
 
 中新社北京4月26日电：“为纪念辛亥革命八十周年，‘辛亥革命烈士彭家珍学术研讨会’今天在此间召开。中国社会科学院近代史所、北京史地民俗学会、成都彭家珍大将军专祠等单位的学者、专家在研讨会上宣读论文，探讨彭家珍的成长过程和炸良弼的史实等。与会者并实地考察、凭吊了烈士在京遗迹。1888年生于四川金堂县的彭家珍，在留学日本期间加入同盟会,先后担任京津同盟会军事部长，北伐蜀军副总司令，秘密从事反清活动。在辛亥革命紧急关头，于1912年1月26日在北京刺杀清军统帅良弼时壮烈殉身，时年二十三岁。良弼两天后死去。此事件为促使清帝迅速退位、推翻帝制创立共和起了巨大作用。彭家珍后被孙中山追赠陆军大将军，赐恤祀忠烈祠。”
@@ -1054,8 +1036,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 我们回想八十年前志士仁人的自我牺牲故事，使我们深切感到：要皇帝和“老贼”退位退职，他们用的方法是那样干净利落、那样勇往直前。他们不来什么呼号、抗议、静坐、绝食，更不会学日本浪人头戴布条做什么民主死亡的治丧秀。他们身为大丈夫，做的是大丈夫的事，要反对就光明幕落慷慨激昂的反对。反看今天的台湾大小英雄，所作所为，全是粉拳绣腿的小把戏，非但不是大丈夫，连小丈夫都赶不上，女人女人女人女人而已！
 
 1991年4月27日
-
-
 
 《武昌革命真史》书后
 
@@ -1093,8 +1073,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 1956年
 
-
-
 乱世陈家泪
 
 去年4月7日，我在日记上写：“平景来电。说大陆上中共取得政权后，许多同志都嘴脸毕露；可是‘台独’和党外许多同志，还没取得政权就嘴脸毕露了。”为什么“台独”和党外许多同志会这样忘恩负义，这样小格局、小家子气呢？追究起来，这实在和国民党多年调教有关。国民党本身就是一个“忘恩负义”的党，它在取得政权后，对自己人曾展开大整肃，多少老革命党被“党内主流派”开除的开除、脚镣的脚镣，这种鼠肚鸡肠，“台独”和党外人士却青出于蓝，他们尚未取得政权，就对自己人展开大整肃了：排挤的排挤、诽镑的诽谤、伤害的伤害……花样百出，国民党都瞠乎其后。“台独”和党外人士为什么这样青出于蓝国民党呢？这是因为他们一方面受调教于国民党，一方面又是台湾人的缘故。台湾人固有高人，但绝大多数是混蛋懦种，且无情无义。在这方面，是中国人之冠。……当然此处所说的台湾人，包含生在台湾的外省人在内，这种外省人一旦有头有脸的进人所谓庙堂，无情无义，“前进”得惊人，比台湾人还台湾人呢！
@@ -1124,8 +1102,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 《国民日日报》是革命党接替《苏报》而办的报纸，“发刊未久，风行一时，时人咸称《苏报》第二”。陈撷芬在自家的报纸被封后，仍旧以“仅存之番银二百版，含笑而至”，义助革命事业，这种可敬可爱的故事，真是动人极了。陈撷芬后来嫁给杨俊（四川人），一起留学美国，在革命成功后不言中华民国之禄，中华民国之禄亦弗及，“贤者不负天下，而天下负贤者，非建国之祥！”又多一例矣！
 
 1986年3月23夜
-
-
 
 黄门鼓吹
 
@@ -1182,8 +1158,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 稍知中国现代史的人，都知道中华民国的建立，黄兴是孙文以外第一功臣，但在国民党写的历史上和表现的尊敬上，显然比例不对。国民党的做法有两种，一种是“放大”，一种是“缩小”。“放大”方面，章炳麟在《中华民国开国前革命史》的序中已经评论：“自民国九年以后，知当时实事者已少，夸诞之士，乃欲一切笼为己有，亦曷足怪乎？”这就是说，不是国民党的丰功伟绩，也被国民党大而化之了；“缩小”方面，我们看不到黄兴、蔡锷等伟人的纪念像与纪念路，看到的反倒是“吴敬恒像”“于右任像”“史迪威公路”“罗斯福路”“麦克阿瑟公路”……把黄兴、蔡锷等的尊敬，真不知“缩小”到哪儿去了！这又如何教人心服呢？对“不对自己胃口”的伟人，就可以这样吗？
 
 1982年4月6日
-
-
 
 砸掉那铜像！
 
@@ -1515,8 +1489,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 唐秘书长于上午9时抵达金门机场，战地司令官在场迎接，随即驱车至水头吴先生海葬处铜像前瞻仰，并献花圈致敬，军民代表亦曾参加。唐秘书长继参观稚老纪念亭设施，他对金门军民去年元月为稚老所竖的半身铜像，和稚晖亭前驻军最近修筑的马路圆环栏杆等，使环境优美壮观，认为十足表现金门军民对这位“党国元老”的崇敬。
 
-
-
 谁忠谁奸
 
 ——兼评曹汝霖《一生之回忆》的一些错误
@@ -1659,8 +1631,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 曹汝霖在这里又犯了大错。王国维是民国十六年6月2日自杀的。满洲国是民国二十一年3月9日成立的，前后相差五年，王国维怎么能“闻满洲国成立”？
 
 以上随手抽样举例，可使我们对《一生之回忆》这部书的取材和写法，先有一些不同角度的印象。曹汝霖在书中说错的，当然不止上面这些，书中笔误、失实、传闻以及倒果为因、次序混乱的地方，还有很多，实在没有一一细举和一一订正的必要。例如他写美军强奸北大女学生沈崇一事（第380页），可以说行行都错，错得教你简直没法挑、没法改。我们遇到这些赘文，只好放它过去。很显然的，我们研究这本书的目的，乃在于从这本难得的第一手史料里，觅取近代史实的一些真相，我们要细心推敲这个“九十老人”所提供给我们的许多“孤证”和“旁证”，然后去求得定案。《一生之回忆》这部书，牵扯的范围太广了，内容又对错杂糅、轻重不分，我们必须很技巧的读它、很用方法的研究它，才能有用。
-
-
 
 《全盘西化的理由》前记
 
@@ -1835,8 +1805,6 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 
 反对全盘西化的人的理由，当不止此，然其浅陋，也可以见其大概了。
 
-
-
 《中国近代史论集》序例
 
 这是中国近代史学家蒋廷黻博士的近代史论专集。
@@ -1912,6 +1880,3 @@ AbelRemusat曾云：最先编辑中国字书而附以欧洲语言之解释者，
 以上十四大项，已全部囊括了蒋廷黻这一方面的主要著作。至于文星书店、传记文学出版社及其他翻印商有《蒋廷黻选集》的出版，本书并不跟它冲突：一来本书为专辑中国近代史论部分；二来本书所收，为《近代中国外交史资料辑要》上中卷之各章节引论、《中国近代史大纲》等，都为《蒋廷黻选集》所无；三来本书编排次序上，都重加订正，而《蒋廷黻选集》中的次序，却偶有误差之处。
 
 1970年4月25日
-
-
-
