--- a/09.历史文化类/中国迷信新研.md
+++ b/09.历史文化类/中国迷信新研.md
@@ -1,4 +1,8 @@
-#《中国迷信新研》目录
+# 中国迷信新研
+
+<!-- toc -->
+
+## 目录
 
 * 一、中国女人割股考
 * 二、中国男人割股考
@@ -19,8 +23,6 @@
 * 十七、中国人的厉鬼思想
 * 十八、中国人的阴部思想
 * 十九、上限教条、下限迷信
-
-
 
 中国女人割股考
 
@@ -576,7 +578,7 @@
 
 《婺源县志》/戴莲芳/太仆卿余一龙妻/姑/姑病/割股以进/姑愈否不详/自身疮而死/累赠夫人
 
-《黟县志》/舒氏	诸生卢士隙妻/姑/姑病危后又复发/两次刲股以进/愈/不详
+《黟县志》/舒氏 诸生卢士隙妻/姑/姑病危后又复发/两次刲股以进/愈/不详
 
 《旌德县志》/江妆容/乡民营春浚妻年方十四割肉事亲/母及姑及兄/母病、姑病、兄病/割肝进母后又割股事姑复断左手中指以食兄/母愈姑及兄不详/不详
 
@@ -850,7 +852,7 @@
 
 《临淮县志》/张氏/张铁冶三女/父/父病/割股以救/寻愈/不详
 
-《临淮县志》/朱氏/邑民史笔妻/姑	姑疾/刲股以救/不详/人称孝妇
+《临淮县志》/朱氏/邑民史笔妻/姑 姑疾/刲股以救/不详/人称孝妇
 
 《临淮县志》/张氏/诸生冯龙京妻/姑/姑病笃/割股和药以进/疾遂愈/不详
 
@@ -1440,8 +1442,6 @@
 
 (13)中华民国成立后，割股之风，并未随旧中国以去，中国人大脑中的中国，其实还是旧中国。这在民国三年（1914）6月29日的《大总统批令》中，就可看出一斑。这天中华民国大总统批准褒扬顾张氏，其中原因之一，就是这位老太太十五岁时，为她爸爸割过股！
 
-
-
 中国男人割股考
 
 ——也是只此一家的中国文化
@@ -1636,8 +1636,6 @@
 
 〔附记〕中国男人割股，范围比女人窄得多，他们以割给自己的直系尊亲为主，间或割给兄弟。却没有割给过老泰山丈母娘的例子，也没有割给过太太的例子。与中国女人比起来，这是很有趣的大差异，值得特别注意。
 
-
-
 台湾土蛋割股考
 
 写完《中国女人割股考》和《中国男人割股考》，意犹未尽，再补充一点台湾地区的现代割股材料。这些材料都收在1965年7月15日台北县新庄镇觉明寺发行的《全省孝子孝妇事录》一书里，书由全省孝子孝妇事录编辑委员会编印，所收愚孝故事八十多条，其中和割股有关的有三条。第一条是《杨乌涂割肉补父疮》：
@@ -1683,8 +1681,6 @@
 《全省孝子孝妇事录》是用很欠通的文字写的，我都原样保留了。正因为有这种文字水平，所以才出这种鬼书啊！
 
 1986年5月7日
-
-
 
 “韩信用兵”与“萧何转饷”
 
@@ -1792,8 +1788,6 @@
 
 敖之1986年6月10日
 
-
-
 铸像卜休咎
 
 用铸像（铸象）方法，作为卜占，以定休咎，是中国古代北方民族的一个习惯。
@@ -1813,8 +1807,6 @@
 这些北方民族在中国中原两三百年后，都同化在中国里头了，他们的一些习惯，有的也不见了。铸像卜休咎，就是其中的一个。它虽然是一个没落了的习惯，但它毕竟是我们老祖宗的一种思想，值得我们研究研究。
 
 1990年2月8日
-
-
 
 厌胜
 
@@ -1836,8 +1828,6 @@
 
 1990年2月14日
 
-
-
 厌镇
 
 “厌镇”也叫“魇镇”、也叫“魔镇”、也叫“木工厌胜”。通指木工在造房子时做手脚，在建筑材料上施以巫术，用来害房屋主人。事实上这样干的，不止木匠，其他匠人也优为之，但以木匠居多，故叫木工厌胜。
@@ -1851,8 +1841,6 @@
 关于木工厌胜的花样，种类繁多，有刻木为太监者，害得屋主家“单传之后无嗣”（《果报闻见录》）；有以孝巾伴砖者，害得室主家“丧服不绝者四十余年”（《在园杂志》）；有的刻木为一女四男淫亵之状，害得屋主家“生女多不贞，二三世皆然”（《在园杂志》）……光怪陆离，使中国厌镇文明，变得益发邪恶而多样，构成中国思想的又一特色。
 
 1990年2月15日
-
-
 
 厌炮
 
@@ -1870,8 +1858,6 @@
 
 1990年2月16日
 
-
-
 祝诅
 
 祝诅是祈求鬼神以降祸他人。《史记-孝文本纪》所谓“民或祝诅上，以相约结，而后相谩，吏以为大逆”，就是指此。《史记-惠景闲侯者年表》又所谓“〔武帝〕后元（公元前88）年四月甲辰，〔遒〕侯则坐使巫齐少君祠祝沮，大逆无道”，也是指此。《汉书-外戚传上》所谓“女子楚服等坐为皇后巫蛊祠祭祝诅，大逆无道”；《世说新语-贤媛》所谓“〔赵〕飞燕谗班婕妤祝诅”；《后汉书-清河孝王庆传》所谓“欲做蛊道祝诅”……都是指此。
@@ -1887,8 +1873,6 @@
 最有趣的是陈宣帝的第四子长沙王陈叔坚，他在陈后主时，势倾朝廷，后来被夺权，《陈书-长沙王叔坚传》说他“不自安，稍怨望，乃为左道厌魅以求福助，刻木为偶人，衣以道士之服，施机关，能拜跪，昼夜于日月下醮之，祝诅于上”。这位老兄，竟发明出活动道具以增祝诅的效果，这种6世纪的“进步”，真使六七百年前的汉朝人相形见绌呢！
 
 1990年2月27日
-
-
 
 纸人
 
@@ -1906,8 +1890,6 @@
 
 1990年2月24日
 
-
-
 媚道
 
 “媚道”思想是一种迷信思想，一般说来，它是女人专用的。有积极和消极两个面，却又两面一体。积极方面，它使自己得宠；消极方面，它使情敌遭殃，宠殃之间，所做法术，就是媚道。
@@ -1924,8 +1906,6 @@
 
 1990年2月25日
 
-
-
 蛊
 
 以蛊害人，有两种含义，一种是“蛊毒”，一种是“巫蛊”。《魏书-刑罚志》记5世纪时有这样的分别：“为蛊毒者，男女皆斩，而焚其家；巫蛊者，负羖羊抱犬沉诸渊。”为什么有这样的不同？因为“为蛊毒者”，只是造蓄蛊毒杀人，杀之可也（在唐朝是绞，在明朝清朝是斩，但不烧罪犯房子）；但是为“巫蛊者”，就是把罪人背羊抱狗在河中淹死，这是因为巫蛊中有邪术，要加上一点“仪式制裁”（RitualSanction）才能清洁溜溜。“蛊毒”是放蛊杀人的行为，《志异续编-放蛊》所谓“与人有仇，辄置蛊于饮食内”是也；“巫蛊”只是一种咒诅，但处罚起来，后者却重于前者，这是中国思想中的一个差异。人们厌恶“巫蛊”，尤其厌恶祸首巫者，所以为祓不祥，处罚特严。
@@ -1937,8 +1917,6 @@
 “巫蛊”也叫“厌蛊”，并不全由女巫行之。《北史-郑译传》记郑译“自以被疏，阴呼道士章醮，以祈福助。其婢奏译厌蛊左道。帝谓译曰：‘我不负公，此何意也？’译无以对”。又《北史-滕穆王瓒传》记杨纶“忧惧，呼术者王琛问之。……有沙门惠恩、崛多等，颇解占候，纶每与交通，尝令此三人为厌胜法。有人告纶怨望咒诅，帝令黄门侍郎王弘穷验之。弘希旨奏纶厌蛊恶逆，坐当死”。又《北史-卫昭王爽传》记杨集“优惧，乃呼术者俞普明章醮以祈福助。有人告集咒诅，宪司希旨，锻成其狱，奏集恶逆，坐当死。诏下其议，杨素等曰：‘集密怀左道，厌蛊君亲，是君父之罪人，非臣子之所赦，请论如律。’”以上都由“道士”“术者”行之。
 
 1990年2月28日
-
-
 
 偶人
 
@@ -1955,8 +1933,6 @@
 偶人的材料，也有以玉制作的。《宋书-二凶传》就有“遂为巫蛊，以玉人为上（宋文帝）形像，埋于含章殿前”的记录，可见取材多方，并不限于土木也。
 
 1990年2月28日
-
-
 
 勾魂摄魄
 
@@ -1986,8 +1962,6 @@
 
 1990年8月14日
 
-
-
 其如予何
 
 “其如予何”只不过是“又能把我怎样啊”的口气，但在中国思想中，这种口气，却有着别开生面的自信与涵义。
@@ -2001,8 +1975,6 @@
 王莽以后，中国人没人再敢狂妄的学孔子了，但是“天生德于予”的自信，却会变相的、小规模的发作起来。宋朝王安石不喜欢洗涤，脸乌漆妈黑的，他的学生以为他病了，去问医生。医生说：“此垢汗，非疾也。”学生们乃拿来“澡豆”（一种用豆末合药制成的粉剂，古人用来洗脸洗手的），请他干洗，王安石说：“天生黑于予，澡豆其如予何！”（《梦溪笔谈》）这种气派，就是学孔子的，只是规模小得多了。
 
 1990年2月26日
-
-
 
 中国人的祖坟思想
 
@@ -2025,8 +1997,6 @@
 ……（编者略）
 
 1989年10月9日
-
-
 
 中国人的厉鬼思想
 
@@ -2054,8 +2024,6 @@
 
 1989年11月6日
 
-
-
 中国人的阴部思想
 
 中国人有许多怪思想，怪思想且无所不在。《庄子》说“道”“在屎溺”，可见大小便中，也有至理存焉。和大小便器官关系密切的是生殖器官。男性生殖器称“阳”、阳具也、阳道也，都是指此，《汉书-艺文志》中有《黄帝三王养阳方》二十卷，可见崇阳之盛，见诸专书。最妙的，男性生殖器不但称“阳”，也公开矛盾的大称其“阴”，阴茎即阳具，已成通说。《史记-吕不韦传》有“大阴人”为舍人，大阴人者，“阳道壮伟”之人也。现在流行称的阳痿，古人都叫阴痿，《史记-五宗世家》有“胶西于王端……为人贼戾，又阴痿，一近妇人，病之数月”的话，就是证据。更妙的是，女性生殖器居然也称“阴”。《汉书-广川惠王越传》有幸姬陶望卿“自投井死，昭信出之，稼代其阴中，割其鼻唇、断其舌”的话，就是史例。这一称“阴”用法，流传至今，通称阴部，与阳具相对。
@@ -2065,8 +2033,6 @@
 《六合内外琐言》等书中，都有妇人裸以厌敌之说，此类“妇人厌炮”，是中国人的阴部思想的精华。中国思想中有所谓“厌胜”，就是以诅咒制胜、使人厌伏。《后汉书-清河孝王庆传》有“因诬言欲作蛊道祝诅，以菟为厌胜之术”，就是指此。但是以菟厌胜，不算本领，最后出之以阴部，才算功德圆满也。中国文化之有阴功，由此可见矣！
 
 1988年10月30日
-
-
 
 上限教条、下限迷信
 
@@ -2103,6 +2069,3 @@
 有了前面这些脉络，我们再回头看吴延环的妙文，我们就恍然大悟：国民党的意识形态的代表，竟好笑如此！最后吴延环虽“于过关之后，从实招来，以为迷信者戒”！但他也不想想：他是七十五岁的人了，七十五岁还闹这种下层信仰的笑话，他又有何脸面来说教呢？人活到七十五岁，才在大迷信特迷信后七天，写文章劝人“万勿迷信星相”，这种人的脸皮真太厚了吧！
 
 1983年6月20日
-
-
-
