--- a/09.历史文化类/为历史拨云.md
+++ b/09.历史文化类/为历史拨云.md
@@ -1,4 +1,8 @@
-#《为历史拔云》目录
+# 为历史拔云
+
+<!-- toc -->
+
+## 目录
 
 * 一、中国史的拨云见日
 * 二、中国人的“五百年”思想
@@ -49,8 +53,6 @@
 * 四七、捺钵文化和比较
 * 四八、既不“盛成”，也不“修史”，更不“春秋”
 
-
-
 中国史的拨云见日
 
 《世说新语》有“拨云雾，睹青天”的快感，这种快感，到《水浒传》里转成了“拨云见日”，意指扫除乌云，得见天日。看中国史的问题，恰恰如此。
@@ -71,8 +73,6 @@
 
 1993年10月6日
 
-
-
 中国人的“五百年”思想
 
 《孟子-公孙丑下》有这样一段：“孟子去齐，充虞路问曰：‘夫子若有不豫色然。前日虞闻诸夫子曰：君子不怨天，不尤人。’曰：‘彼一时，此一时也。五百年必有王者兴，其间必有名世者。由周而来，七百有余岁矣！以其数，则过矣！以其时考之，则可矣！夫天未欲平治天下也；如欲平治天下，当今之世，舍我其谁也？吾何为不豫哉？”孟子离开齐国，在路上，被充虞看出他有不快乐的样子，因以为问。但是，他却以大方向答复了充虞。他说每过五百年必会有圣君兴起，那时候还有命世之才出现，从周武王以来，现在已经七百多年了，论年数，都超出五百年了；论时势，现在也正是时候了。正因为有五百年必出圣君贤相的使命感，所以，他老孟又为什么不快乐呢？五百年后的第一名，还有谁呀？
@@ -84,8 +84,6 @@
 从五百年思想出现以后，五百年成为一个隐含抱负的时间单位，也就习以为常。试看宋朝人就有诗说：“梅花重压帽檐偏，曳杖行歌意欲仙，后五百年君记取，断无人似放翁颠。”（陆游）清朝人就有诗说：“满眼天机转化钧，天工人巧日争新。预支五百年新意，到了千年又觉陈。”（赵翼）……流风所及，甚至鲤鱼修满五百年都有龙门之跳了。五百年的神奇性，还用说吗？
 
 1990年2月23日
-
-
 
 中国人的观音思想
 
@@ -103,8 +101,6 @@
 
 1988年11月10日
 
-
-
 中国人的加水思想
 
 中国笑话书《哈哈笑》中，有《在我身上》一则笑话。说一个富翁出外旅行，晚餐醉酒，在旅馆中老是冒汗。他叫一个小厮为他扇扇子，扇到热解汗收，问小厮道：我身上的水，到哪儿去了？小厮肃然对曰：“在小的身上。”
@@ -118,8 +114,6 @@
 《破涕录》有这样一段：“曾记前清时，当孙氏之初出亡，清政府行文通缉，于孙氏之名，皆加一水旁，书作汶字，盖本作史者之惯例，凡对于大逆不道者之名，必加水旁以示区别；若记外国人之译名，则加口旁也。其时日本大阪适有华裔商姓孙名淦者，为驻日公使某所侦知，以为必是孙汶之弟兄，拘之，既察知该商为上海人，与孙氏实不相干，始释之。此一牵涉，尤为匪夷所思。”可见姓名加水，加到后来，竟有糊涂大官人以为孙汶是本名了。中国人加水思想之泛滥，竟可荒唐到这种程度了。
 
 1989年2月23日
-
-
 
 中国人的贪污思想
 
@@ -136,8 +130,6 @@
 国民党调查局在2月1日成立了肃贪处，准备大举惩治贪污，我看了很好笑。中国人惩贪，从明太祖剥皮到国民党戡乱时期贪污治罪条例的死刑条款，何代不严？但贪污之事，何代无之？根本的原因很多，在政府方面，制度上必须修正两点，方有起色。第一是监督工作，不能出自政府本身；第二是薪金给付，必须合乎情理。例如公教人员房租津贴每月七百元，这种数目，连间厕所都租不到，如何养廉？这样开玩笑，人不贪污，其可得乎？
 
 1989年2月2日
-
-
 
 中国人的名教思想
 
@@ -321,8 +313,6 @@ OgdenandRichards:MeaningofMeaning,ChapterII.
 
 Conybeare:Myth,MagicandMorals,ChapterXIII.
 
-
-
 名器不可乱！
 
 《左传》里记孔夫子一段话：“仲尼闻之曰：‘惜也！不如多与之邑。唯器与名，不可以假人。——君之所司也！’”这段话的冒出，原来是针对一件事而说的，这件事在《资治通鉴》里写得较详细：
@@ -353,8 +343,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 《人间世》第七卷第十期，再复刊第五号，1965年9月
 
-
-
 中国人的汉贼问题
 
 中国人有许多只此一家的观念，其中一个，表现在政治上极为强烈也极为普遍的，是“汉贼不两立”的决绝。“汉贼不两立”这句话，中华书局《辞海》说出自诸葛亮《出师表》，是错的。应该是《后出师表》。《后出师表》一开始就说：“先帝虑汉贼不两立，王业不偏安，故托臣以讨贼也。以先帝之明，量臣之才，固知臣伐贼，才弱敌强也。然不伐贼，王业亦亡；惟坐而待亡，孰与伐之？是故托臣而弗疑也。”不过，《后出师表》是一篇可疑的文章，因为《三国志-诸葛亮传》只收了《出师表》，而在裴松之的注中，引自《汉晋春秋》，才收了《后出师表》。裴松之并注明说：“此表亮集所无，出张俨《默记》。”《后出师表》中有“然丧赵云”等话，但赵云死在后主建兴七年（229），而《后出师表》上表时却在后主建兴六年（228），若此表是真的，诸葛亮焉能弄错，把赵云将生作死？由此可见，《后出师表》可能是伪作，伪作者也许是张俨、也许是诸葛恪、也许是别人。
@@ -366,8 +354,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 几十年来，困守东南一隅的国民党，是“汉贼不两立”信念的拥护者，他们宣传上一句“汉贼不两立”，却忘了下一句“王业不偏安”，结果此安一偏，不可收拾；且因话说得太满，亦无以善其后。连战昨天公开宣布“我们绝对不认为所谓汉贼不两立是我们的政策”了，显然的，这些新贵是实质外交、弹性外交的拥护者了。从学理上看，这种外交固非无据，但是台湾与大陆的情况，又岂是实质与弹性了得？过去叶公超曾指出：“蒋先生要向历史负责，坚持汉贼两不立”，以致“今天你可以看出我们在外交上更孤单了”（语见赵世洵《记叶公超先生二三事》一文）。但是，我却觉得蒋介石是怵然于《后出师表》精神的人，他看出“不伐贼，王业亦亡”的危险性，你不能伐贼，纵实质一下、弹性一番，求得一时之两立，也不能久。如今国民党的孤臣孽子们要以汉贼并立来偏安了，这样的如意算盘，诸葛亮绝不相信，蒋介石也不会相信的。
 
 1988年11月16日
-
-
 
 半部《论语》治天下
 
@@ -386,8 +372,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 在赵普死后两百年，流传出这种说法，难免有附会之处。但在赵普死时，宋太宗为他写神道碑，说他“性本俊迈，幼不好学；及至晚岁，酷爱读书”，则显示出赵普的确治天下时，只是不学有术的家伙。杜甫诗说“小儿学问止《论语》”，《论语》不过是儿童幼学之书，读它并不稀奇。但能读到“半部《论语》治天下”的地步，则显然是夸大《论语》的奥妙了。“半部《论语》治天下”的思想，自此形成了中国人的刻板思想之一，赵普是治天下有成就的宰相，《论语》的功用，有这么一位大人物来现身说法，中国人就更信而有征了。君不见，直到1951年，台湾海服书局还出版《半部〈论语〉与政治》一类书，还认为“惜乎二千年来，尊孔之典，行之弗替，而在政治上能实践孔子论语之遗教，以致治平实效者，只有宋相赵普‘以半部《论语》治天下’一语”呢！
 
 1990年2月8日
-
-
 
 从科举到选举
 
@@ -413,8 +397,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1986年12月9日傍晚，以一小时半写成
 
-
-
 国民党无大臣之风
 
 蒋梦麟《西潮》里提到一个故事，他做“教育部长”时候，与党国元老吴稚晖意见相左，吴稚晖跑到“教育部”，双目炯炯有光，厉声说道：“你真无大臣之风。”蒋梦麟听了，第二天就辞了职，回到北京大学。刘半农教授闻之，乃刻了一方图章给他，文曰：“无大臣之风。”
@@ -433,8 +415,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1988年10月4日
 
-
-
 大臣的进退
 
 我在《国民党无大臣之风》里，提到“大臣之体”是中国政治人物中，大家很讲究的一个自勉条件。“大臣之体”的条件很多，诸如主敬、盛德、清介、雍容、识大体等等，都属之。正因为有“大臣之体”的当事人身份不是常人、不是小官，而是大臣，所以大臣立身行事，不能以常人论、以小官显，而要在持身之严、守道之坚、辞色之谨、原则之维护上，都远超常人与小官的标准之外。大臣的特色在定天下大计、定百年大计，在定大计之中表现自己，为国为民做大事、坚持大事，这样子表现，才正是有“大臣之风”。
@@ -448,8 +428,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 我指责国民党无大臣之风，因为国民党的大臣都只知道做官、只是“小人知进而不知退”，没有一个会为原则而辞职，甚至不为原则，为了颜面都不肯，这简直是小人式的不要脸了。例如“法务部长”萧天赞，为了当年自己不法的事被挖出，竟不知辞职，反而希望“立法委员”“大哥、大姐、长辈、先进”能够原谅他；“财政部长”郭婉容，为了今天收税政策出尔反尔，竟也不知辞职，反而老脸皮厚的恋栈不已，外界还夸她说：“看过这么多政府官员，第一次碰到这么有格的！”真不知“格”在哪里！古今中外的大臣，看到国民党这种官场小人如此现形，真要哈哈大笑了！
 
 1988年10月5日
-
-
 
 大臣的失态
 
@@ -465,8 +443,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1988年10月11日
 
-
-
 论“大夫无私交”
 
 我生平“作文成功，做人失败”。为什么失败？因为专注于作文，没工夫交朋友，以致和人极少私交。有人以此为怪，我讽世而答曰：“我跟女人私通都来不及呢，哪有工夫和男人私交？”朋友都如此，读者更不消说。林青霞曾劝我千万不要给崇拜你的人回信，因为一回信，他又来信，就没完没了。事实上，我极少回信，不论对方崇拜不崇拜，我都一视同仁，原因是要写大文章，无暇私交。古代人“大夫无私交”，从反面看，无私交固是怕帝王猜忌；但从正面看，无私交却也“深得大臣之体”。《论语》记澹台灭明“行不由径，非公事未尝至于偃（子游）之室。”（澹台灭明这个人，他从不走小道捷径，不是为了公事，从来不到我屋里来。）《史记》记宋昌说“所言公，公言之；所言私，王者无私。”申屠嘉说“使君所言公事，之曹与长史掾议，吾且奏之；即私邪，吾不受私语。”我颇欣赏这类作风。虽然回不回信，算不上什么公不公之事，比拟或嫌不伦，但是无私交一点上，却属同一性质（如果写信也涉嫌私交的话）。
@@ -481,8 +457,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1988年10月15日
 
-
-
 非公关论
 
 《左传-襄公二十一年》有这样一段：“乐王鲋见叔向曰：‘吾为子请。’叔向弗应，出，不拜。其人皆咎叔向，叔向曰：‘必祁大夫。’室老闻之曰：‘乐王鲋言于君无不行，求赦吾子，吾子不许。祁大夫所不能也，而曰必由之，何也？’叔向曰：‘乐王鲋从君者也，何能行？祁大夫外举不弃仇、内举不失亲，其独遗我乎？诗曰：“有觉德行，四国顺之。”夫子觉者也。’”（乐王鲋去见叔向，说：“我去替你说情去。”叔向却理都不理他。他走的时候，也不送他。叔向的手下都埋怨叔向。叔向说：“一定要祁大夫出来，才能替我说情。”他的管家说：“乐王鲋对国君进言，言无不行，他来帮你请求救你，你却不答应。其实祁大夫是办不到的，你却说一定要由他去办，这是为什么啊？”叔向说：“乐王鲋是个马屁精，一切都顺着国君的意思，他哪里办得到？而祁大夫却是大公无私的，他荐举外人，连仇人都荐举；荐举亲人，连儿子也不避嫌，这样大公无私、用心如日月的人，难道独独会漏掉我吗？《诗经》上说：‘有正直的德行，天下都会归顺他。’祁大夫就正是这样的正人君子。”）
@@ -494,8 +468,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 这个故事告诉我们：真正的正人君子是不做公关（公共关系）的。人与人的关系，应该是道义的、是非的，而不是私谊的，涉及国家大事，尤其如此。祁奚推荐自己的仇人出马治国，他并不因为对方是他的仇人就抹杀人才，他只问你对不对，不问我喜不喜欢你。这种气度，今天的中国人是没有的。今天的中国人要整天花大好时力去做公关，要靠关说、友好、勾结、拉拢、攀交情、朋比为奸等等才能办事，这是小人与小人的关系，不是君子之大道。在这种世风下，我同意许多人要求别人支持时，用的是做公关的方法。但我从来不这么做。因为我认为你若支持我，应该是出于道义，既是出于道义，那就不靠我们是否有私交。有也好、无也罢，甚至我们有仇，你都该支持我。如果你是正人君子，你支持一个人，只该问他对不对，不能说他对你好才支持他。如果我李敖为了要人支持，就卑躬屈膝的到处做公关，那等于把支持我的人小看，也太侮辱我李敖了。只有小人与小人的交情，才那么做法。我李敖是不屑为的。
 
 1989年12月11日
-
-
 
 复仇——不共戴天
 
@@ -521,8 +493,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 ②中华文化复兴运动推行委员会、国立编译馆中华丛书编审委员会主编的《春秋公羊传今注今译》中，把“父不受诛，子复仇可也”译成“父亲要不被人杀，儿子可以报仇”，完全译错了。
 
-
-
 记一个难缠的敌人
 
 《晋书-苻登传》记一个顽敌如下：
@@ -532,8 +502,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 “何其厄哉！”就是“多倒霉啊！”苻登碰到这么难缠的敌人，瞻之在前，忽焉在后；谓其将死，忽然复来，真不能说不倒霉。姚苌善用兵，有一千六百人破敌三万人的纪录（《晋书-姚苌传》），难怪苻登缠不过他。他手下败将雷恶地说：“吾自言智勇所施，足为一时之杰。校数诸雄，如吾之徒，皆应跨据一方，兽啸千里。遇姚公智力摧屈，是吾分也！”（《晋书-姚苌传》）足见他用兵的本领。有这种本领，时有豪杰，也要惊叹“何其厄哉！”“是吾分也！”了。
 
 1994年3月
-
-
 
 豸
 
@@ -559,8 +527,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1990年2月11日
 
-
-
 洋麒麟
 
 洋文中有一个字叫“尤尼康”（unicorn），梁实秋在远东图书公司出版的词典里，把它翻成“麒麟”，严格说来，这种翻译是错的。事实上，只能翻成“洋麒麟”。
@@ -576,8 +542,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 女诗人安妮林白（AnneMorrowLindbergh）有诗集《独角兽》（TheUnicorn因系洋人著作，故不以“洋麒麟”译书名），其中有“柙中独角兽”（TheUnicorninCaptivity）一诗，说独角兽在缧绁之中，一切寂寂；但是一枝独秀入墙来，生气在茲。横看成囚，纵看却是自由。（Quiet,theUnicorn,/Incontemplationstilled,/Withacceptancefilled;/Quiet,saveforhishorn;/Aliveinhishorn;/Horizontally,/Incaptivity;/Perpendicularly,/Free.）我想起：从拉夫瑞斯（RichardLovelace）牢内寄情，到梭罗精神越狱，到甘地桎梏之中快然自足，以此中自由为友人道，这些气概，岂不都是洋麒麟的气概吗？虽无处女大腿可枕，但在监狱之中，雄风不减，舍洋麒麟其谁哉？
 
 1990年2月12日
-
-
 
 立肺石
 
@@ -601,8 +565,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 〔附记〕清朝凌杨藻《蠡勺编》有“肺石”一条，说：“《秋官》大司寇：‘以肺石远穷民。’郑康成曰：‘肺石，赤石也。’贾公彦疏：‘谓必使之坐赤石者，使之赤心，不妄告也。’似以肺石为可坐者。下文‘立于肺石三日’，贾郑倶无明文，而读者又若以肺石为可立，皆由上文有‘桎梏而坐诸嘉石’之语，遂一例视之。案《梦溪笔谈》，言长安故宫阙前，有唐肺石尚在，其制如佛寺所搫响石，而甚大，可长八九尺，形如垂肺，亦有款识，原其义，乃伸冤者立其下，击之，然后士听其辞。如今之挝登闻鼓也。所以肺形者，便于垂。又肺主声，所以达其冤也。”对立肺石的解释，别具新说。但是肺石既“长八九尺”，又呈卧姿，自然可立。说：“伸冤者立其下，击之。”这种情形，于理难通。敲鼓登闻可也，打石头显然是难行的，声音也远不如敲鼓也。
 
-
-
 烧掉黑资料
 
 古人有故意毁掉黑资料，以安人心者。
@@ -619,8 +581,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1990年2月5日
 
-
-
 从官逼民反到民逼官反
 
 唐朝孔颖达为《礼记》做注解，说：“诸侯以下及三公至士，揔而言之，皆谓之官。官者，管也。”这一定义，是中国人对官的早期定义、也是一种一针见血的定义。“官者，管也”，足见官是权威的象征，从它有建制以来，就是我要管你的。正因为权威在兹，所以雅好此道者，无不以做官为荣、为得计，纵清高之士如柳下惠者，亦“不辞小官”（小官也肯做）。而中国词汇中以官显者，亦比比皆是。如授以官职叫官人、居官之家叫官户、以官为氏叫官氏、大官住宅叫官邸、官署总称叫官府、官方封邑叫官族、官阶门第叫官阀。……正因为官字当头，一切好办，所以人不官迷者几希。而在奔竞之下，花样百出；恋栈之余，丑态毕露，自也古今一辙。即以最近警界大员一一被揪出谎报年龄以期延后退休为例，其实比照中国传统，一点也不稀奇。宋朝洪迈在《容斋随笔-四笔》中早就记载有“官年”“实年”两种年龄，这套把戏，中国人搞了一千年了，国民党又算老几啊！
@@ -632,8 +592,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 难友曾祥铎在《世界论坛报》发表专文——《国民党在立院终于“硬干”了？》中说：国民党如被迫在“跳海”与“硬干”之间做一痛苦选择，“为了保存政权之存在，说是‘孤注一掷’也好，说是‘强烈反对’也好，说是‘困兽犹斗’也好，总而言之，都属‘硬干’范围。”“如果真的走投无路，也许有人曾想到向对岸打个招呼。”这一演变，是绝对可能的。试看二百二十年前的科西嘉（Corsica）岛下场，可为前鉴。当时科西嘉是被“外省人”——意大利的热那亚人（Genoese）统治，在风起云涌的“科独”压力下，“外省人”政权不堪其扰，也不甘心让它独立，于是就干脆把科西嘉偷偷卖给“大陆”——法国，永绝后患矣！今天国民党的处境，恰像当时的热那亚人，一旦“民逼官反”，狗急跳墙，好戏可真有得看呢！
 
 1988年12月5日
-
-
 
 拦路告状不可拦
 
@@ -741,8 +699,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 陈情人在“有冤无处申”的情况之下，特请两位委员为陈情人申冤。（《台湾时报》1980年9月18日）
 
-
-
 政治椅子学
 
 “立法院”议场最近动工拆除部分椅子，是以整修内部为口实，趁机拆除的。事实上，是因为“老成凋谢”，人数今非昔比的缘故。
@@ -765,8 +721,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1989年8月13日
 
-
-
 限时专判
 
 《史记-匈奴传》记匈奴的法律：“拔刃尺者死，坐盗者没人其家；有罪小者轧（刻面、压碎脚骨），大者死，狱久者不过十日，一国之囚不过数人。”乍看起来，匈奴法如其人，非常粗线条，人犯法入狱，不到十天，就要审判完毕，看来不无草率。其实，这种“限时专判”的制度，不但野蛮的匈奴如此，文明的中原也如此。
@@ -786,8 +740,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 1987年3月3日
 
 〔附记〕古人所谓十天结案，如果一个案子，足足花上十天时间去审理，而不是过堂匆匆问几句即斥回或还押，十天的时间，就政简刑清的手续言，也不算太短也。
-
-
 
 蝙蝠和清流
 
@@ -823,8 +775,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 〔附记〕公元905年，朱温“聚裴桓等名士数十人于白马驿，一夕尽杀之。初，李振……言于温曰：‘此辈尝自谓清流，宜投之黄河，使为浊流。’温笑从之”。（《资治通鉴》第二六五卷）写完这篇文章，我忽然想到浊水溪！
 
-
-
 独裁又爱财者的下场
 
 周朝第十个皇帝厉王（姬胡）在位的时候（公元前9世纪），他用荣夷公代他搞“专利”，剥削老百姓，当时大臣芮良夫劝他，说：“荣夷公好专利而不知大难。夫利，百物之所生也。……胡可专也？”《国语-周语上》记芮良夫的话说：国王的责任是该将利上下流通才对，怎么可以自己专起来，与民争利？普通人专利，都是盗贼，国王怎么可以这样干呢？
@@ -834,8 +784,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 厉王虐，国人谤王。邵公告曰：“民不堪命矣。”王怒。得卫巫使监谤者；以告，则杀之。国人莫敢言，道路以目。王喜，告邵公曰：“吾能弭谤矣，乃不敢言。”邵公曰：“是障之也。防民之口，甚于防川。川壅而溃，伤人必多，民亦如之。是故为川者决之使导，为民者宣之使言，……民之有口，犹土之有山川也，财用于是乎出。犹原隰之有衍沃也，衣食于是乎生。口之宣言也，善败于是乎兴。行善而备败，其所以阜财用衣食者也。夫民虑之于心，而宣之于口，成而行之，胡可壅也？若壅其口，其与能几何？”王不听，于是国人莫敢出言。三年，乃流王于彘。
 
 独裁又爱财者的下场，一至于此！
-
-
 
 谈政治污染
 
@@ -850,8 +798,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 难过的是，古人不甘被政治污染者，至少能做巢父、许由、北人无择，徜徉清流；可是今人呢，却连最该冷静、最该清髙、最该脱俗的高等知识分子们，却也“忘了我是谁”的纷纷投人，或参选、或助选、或联名、或评监，明明身被污染，却还自以为是清流。——连清流定义都被这些浑人糟蹋到这步田地，台湾之有浊水溪，又岂止一条吗？
 
 1989年12月3日
-
-
 
 古今哭庙大观
 
@@ -875,8 +821,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1989年8月1日
 
-
-
 哭的政治与政治的哭
 
 政治是肮脏而多样的玩意，在政治中翻云覆雨，表现出来的，有七情、有六欲，七情见于《礼记》、六欲见于《智度论》，其中政治嘴脸，一应俱全。政治是无情的，但邪门儿的是，搞政治的人却往往用有情做手段，以为测验。稗史中有皇帝死了爱姬，为之泪下，并下令大臣也同声一哭。某大臣应声大哭，人以为异。后来问他你哪来那么多的眼泪，某大臣笑着答道，我当时“自哭我妾耳”！（我哭的是我死去的姨太太啊！）
@@ -897,8 +841,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1989年8月2日
 
-
-
 郝柏村岂可朝淫祠上香！
 
 今天国民党《中央日报》以大标题刊登《郝院长凤屏宫上香》的消息，说：“行政院长郝柏村昨晚至后劲凤屏宫上香祈福。……在虔诚祈福后，郝院长至庙前广场与卖银纸小贩闲话家常。……”
@@ -910,8 +852,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 正因为中国正统文化中严人神之辨、人鬼之防，所以历来都取缔“淫祠”。“淫祠”是滥设而不合礼制的寺庙。试看唐朝狄仁杰禁吴楚等地的“淫祠”，一毁就是一千七百多所，只留下夏禹、吴太伯、季札、伍员（伍子胥）四家而已。像狄仁杰这种大手笔，史不乏书。可是，连旧式的古人都知道取缔的“淫祠”，在新式的今人却都不知道，在国民党统治之下，在台湾，“淫祠”就连年成长不绝。台湾在日本统治之下，承前清余绪，本来“淫祠”就多，据日本人丸井圭治《台湾宗教调查报告书》统计，台湾有大庙三千四百八十四所，小庙七千七百八十七所。到了满脑袋迷信的国民党出现，“淫祠”泛滥，更不可收拾。尤其近二十年来，神坛蜂起，光在台北，就上千家，其他各地，可想而知。国民党大员不知取缔，反倒——以院长之尊，到处膜拜。去年11月5日，“行政院长”李焕，跑到汐止显应庙上香，就是一例。只不过短短的十个月，“行政院长”郝柏村又来了，所不同者，一个南下、一个北上而已。堂堂“中央”大员“非其所祭而祭之”，成何体统？连迷信的古人都能拿捏的分寸与分际，国民党大员都不知道拿捏，国民党是大浑蛋，复奚疑哉？
 
 1990年9月14日
-
-
 
 中国印
 
@@ -952,8 +892,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 有趣的是，有一种印，下场是绝不存库的，那就是死后追赠官职所发的官印。这种印，与冥器同级，是用蜡制的，叫做“蜜印”。“蜜印”是殉葬用的，不能盖。这种制度最早见于晋朝。《晋书-山涛传》说山涛死后，皇帝“诏赐东园秘器、朝服一具、衣一袭、钱五十万、布百匹，以供丧事，策赠司徒，蜜印紫绶，侍中貂蝉，新沓伯蜜印青朱绶，祭以太牢，谥曰康”，就是指此。唐朝权德舆《权载之集》有《哭刘四尚书》诗，里头说：“命赐龙泉重，追荣密印陈。”也是指此。密印就是蜜印，就是使死人干过瘾的印。中国文化可邪门儿，用印用到死人身上，真是皇恩浩荡了！《宋史-舆服志》记神宗元丰六年（1083）诏，同意“臣僚所授印，亡殁，并赐随葬”，已经不用蜜印而来真的了，这更是皇恩浩荡了！
 
 1985年9月8日
-
-
 
 图章政治
 
@@ -1103,8 +1041,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1985年9月9日晨
 
-
-
 论“不敢毁伤”
 
 《论语》记曾子临死前，把学生们叫到床前，说：“启予足！启予手！《诗》云：‘战战兢兢，如临深渊，如履薄冰。’而今而后，吾知免夫！小子！”（看好我的脚啊！看好我的手啊，《诗经》上说：“要战战兢兢啊，就好像靠近深水边，就好像走在薄冰上。”从今以后，我知道身体可以免于被毁伤了！我的学生啊！）
@@ -1126,8 +1062,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 对道德上的冲突，在曾子本人的言论中，也可以看出一些。《礼记》有这样一段：“曾子曰：‘身也者，父母之遗体也。行父母之遗体，敢不敬乎？居处不庄，非孝也；事君不忠，非孝也；莅官不敬，非孝也；朋友不信，非孝也；战陈（阵）无勇，非孝也。’”可见日常生活过得不庄重、不尽忠替皇上做事、不好好做官、不同朋友讲信用、不在战场上勇敢作战，都算不孝。问题是：在战场上作战，又何能免于受伤？受伤岂不于“身、体、发、肤”有所“毁伤”？这种矛盾，曾子并没提出答案，所以，曾子只是口口声声把自己形容成“行父母遗体”的活死人而已，“身、体、发、肤，受之父母，不敢毁伤”的思想，一直是无法自圆其说的，一直矛盾在中国人的心头。
 
 1990年5月9日
-
-
 
 “生稊”与“生华”
 
@@ -1155,8 +1089,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1990年6月12日
 
-
-
 冯起炎如果生在现代
 
 “故宫博物院”《清代文字狱档》载乾隆四十八年（1783）二月《冯起炎注解易诗二经欲行投呈案》，记山西临汾县的一个生员叫冯起炎的，听说乾隆皇帝要去谒泰陵，他便将自己作品带在身上，在路上等皇帝。开路的情治人员见他形迹可疑，把他抓起来，搜出他的作品，前面是以《易经》解说《诗经》，后面有自传一段，竟想请皇帝代他做媒：
@@ -1175,8 +1107,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1985年7月11日晨
 
-
-
 中国的家
 
 中国古代经典主张：“欲治其国者，先齐其家。”“家齐而后国治，国治而后天下平。”这里的家的意思，乃是指家族而言。在古代中国人的看法中，家族是一个完整的单位。这一单位不但有经济的基础（为土地）、法律的保障，甚至还有超法律的权威（为族长权力、为私刑）。家族跟中国人的关系既如此密切，所以研究中国问题，不得不先从这里着力。
@@ -1188,8 +1118,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 但这些道德标准和社会规范，在许多方面，显然已跟工业社会发生冲突。例如工业社会的家庭经济，只是两代，只能下“蓄妻子”而仰不足“事父母”，这时候，道德标准（例如“孝道”）就不得不被逼得打折扣。不了解这种变化，而硬以“孝道”律人或以“不孝”自责，是很不公平的事。
 
 1981年10月21日
-
-
 
 幽高墙
 
@@ -1214,8 +1142,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 陈登原《高中本国史》下册第87页：“成祖成功后，幽惠帝的子孙。高煦失败后，宣宗又幽高煦的子孙，皆禁锢于‘高墙’，子女自为婚配。骨肉之惨，旷古以来，未之有也。”——“幽髙墙”幽到“子女自为婚配”，这正是世纪末的乱伦惨象。英国哲学家罗素说全世界只剩兄妹二人时，难保不乱伦，这在英国只是假设，在中国却是真事也。
 
 1995年9月10日
-
-
 
 岂容国民党民进党，大小浑蛋搞“成年礼”
 
@@ -1249,8 +1175,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1991年3月31日
 
-
-
 弄孙与被孙子弄
 
 民进党的老贼“立委”费希平，12月6日在“立法院”发言，要求老委员、老代表不要再恋栈，三个国会应该全面改选，资深民意代表应该交棒了，何不早日回家含饴弄孙呢？——费希平犯颜以含饴弄孙要求别人，却厚颜不以含饴弄孙要求自己，这是很无耻的孙子战术，北方话骂人“装孙子”，正此之谓也！
@@ -1266,8 +1190,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 美国幽默作家班奇里（RobertBenchley）自嘲说：“我花了十五年的工夫才发现我没有写作才能，但我不能不干，因为那时候我已经太有名了。”（IttookmefifteenyearstodiscoverIhadnotalentforwriting,butIcouldn'tgiveitupbecausebythattimeIwastoofamous.）钱穆之于历史，也正如此。
 
 1988年12月11日
-
-
 
 新夺情说
 
@@ -1289,8 +1211,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1981年
 
-
-
 谢本师
 
 中国人讲究师道、讲究师门、讲究师生情分。但在真理关头，如何自处，要采行哪一种态度，倒是难题。孔子虽然提出“当仁不让于师”（《论语-卫灵公》）的标准，但是中国人却不敢真的像样力行夫子之道，甚至还曲解孔子这种革命性的言论。钱穆在《论语新解》里，公然把“师”字曲解为“众”字，竟把“当仁不让于师”曲解成“若遇行仁之事，在己即当率先向前，莫让给众人为之”！这种曲解孔子的真义，真是孔门的罪人！
@@ -1304,8 +1224,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 谢本师的作风，章炳麟自己也在日后身受之。他的学生周作人曾如法炮制的谢了他；而周作人的学生也如法炮制的谢了周作人。中国人在孔子“当仁不让于师”后两千五百年，终于学会了如何的不让。
 
 1990年2月6日
-
-
 
 “实事求是，莫做调人！”
 
@@ -1331,8 +1249,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1991年2月7日
 
-
-
 直不疑与隽不疑
 
 汉朝有两个名叫“不疑”的奇人：——一位是直不疑、一位是隽不疑。隽不疑名与直不疑相同，字又与东方朔相同（都字“曼倩”）。他们都搭上汉武帝的时代，不过直不疑从汉武帝的祖父汉文帝起就做官，而隽不疑却在汉武帝儿子汉昭帝时方走红为“京兆尹”。
@@ -1350,8 +1266,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 这是另一个极端。隽不疑的母亲隽老太太大概对司法不太信任，因此力矫冤狱，日督其子为平反尽力，否则就绝食向儿子抗议。这种耐人寻味的老太太，其于人权保障，比起今天的中国人权会台湾人权会诸公来，真令人有男不如女之感。特为文表彰，以光古之妇人也！
 
 1990年7月8日
-
-
 
 范仲淹的四大坚持
 
@@ -1371,8 +1285,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 1989年8月21日
 
-
-
 岳飞案的另一面
 
 1月14日《联合报》上说：华视连续剧《八千里路云和月》岳飞壮烈成仁，“教育部”另有意见，希望华视“不要让岳飞死得太惨”。“教育部部长办公室”昨天打电话给华视，电话中希望戏里不要安排岳飞惨死。前天戏里岳飞即因奸人陷害，在狱中被殴吐血。昨天“教育部”于电话中表示此意之前，全戏结局早已录妥，岳飞遭绞刑处死，口中狂喷鲜血成仁，血迹在墙上显出“尽忠报国”四字。
@@ -1388,8 +1300,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 这么说来，宋朝军人那么多，又是干什么的？在《朱子语类》卷一百三十一中，我们找到了答案。当“侗因问：‘当初高宗若必不肯和，乘国势稍振，必成功。’”朱子却答道：“也未知如何。盖将骄惰不堪用。”卷一百三十二中又有朱子之言，说：“岳飞恃才不自晦。”“绍兴年诸将横。”“籍溪尝云：建炎间，勤王之师，所过州县，如入无人之境，恣行擒掠，公私苦之。”卷一百三十三又说：“唐、邓、汝三州，皆官军取之，王师骎骎到南京矣，而诸将虏掠妇女之类不可言。吴玠更要人钱，虏骑来，走归矣！”由此可见，当时的军人一如国民党军人在大陆，守土无能，扰民有余。“岳家军”亦未能免。看看俞正燮《癸巳存稿》中论“岳武穆军律”的文字，看看他手下将军“解鞍脱甲，以所虏妇人佐酒”的暴戾，就知道“岳家军”也是腐化的，以那样的军人谈反攻、谈光复，真是天晓得！
 
 1989年1月15日
-
-
 
 捺钵文化和比较
 
@@ -1453,8 +1363,6 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 
 九、田猎生活的不同：契丹因系渔猎文化，故其田猎生活较为正式而铺张。如有四时“捺钵”等习惯，女真人之田猎生活则不如是郑重。
 
-
-
 既不“盛世”，也不“修史”，更不“春秋”
 
 3月9日，余纪忠的《中国时报》上，以《盛世修史有赖春秋之笔》为社论，指出：政府宣布开放二二八档案，对史学界而言，确属一大盛事。
@@ -1478,6 +1386,3 @@ Conybeare:Myth,MagicandMorals,ChapterXIII.
 至于引太史公之言，除了引文与原文不合、错了两字、不足深论外，也是比拟不伦的。太史公虽是汉朝史官，写“盛世”当代之史，但在制度上，档案全在他手里，他且得一保障，即皇帝不能看他写的历史（历史是要留给后人看的）。凡是尊重制度的皇帝，没有不守这道行规的。甚至汉朝最凶狠的皇帝汉武帝，也不看他写的《史记》，所以《史记》中才能批评“当今圣上”。到了后汉时候，王允就埋怨“武帝不杀司马迁，使谤书（指《史记》）流于后世”。其实王允不知道：光就这一点，说明了汉武帝的尊重史官，遵守制度。这种制度，到唐朝以后，开始动摇。唐朝的一些皇帝，总忍不住要看史官写些什么。看看骂老子没有。这么一来，慢慢的，史官就不敢直笔了。而今日的台湾，在官方和暴民的压力下，时地均不相宜，又何来太史公写出的信史可言？作《春秋》吗？可早得很哩！
 
 1991年3月10日
-
-
-
