--- a/09.历史文化类/要把金针度与人.md
+++ b/09.历史文化类/要把金针度与人.md
@@ -1,4 +1,8 @@
-#《要把金针度与人》目录
+# 要把金针度与人
+
+<!-- toc -->
+
+## 目录
 
 * 一、《要把金针度与人》（代序）
 
@@ -234,8 +238,6 @@
 
 * 十二、《中国名著精华全集》序
 
-
-
 《要把金针度与人》（代序）
 
 ——从《中国名著精华全集》谈怎样读书
@@ -317,8 +319,6 @@
 □我觉得夏曾佑的感慨是很有见地的，难怪陈寅恪后来和他同感。他们两位，都是博极古书的人，最后竟有这种高明的觉悟，是很可注意的。苏雪林《文坛话旧》中记闻一多，也有类似的情况。苏雪林说：“别人钻故纸堆，愈钻愈着迷，终于陷溺其中不能自拔，便要主张中国文化是世界第一。闻一多早年时代何尝没有这种冬烘臭味？可是，现在的他却是奇怪，竟与从前的自己走着完全相反的道路。三十三年五四前夕，联大一部分学生举行了一个历史晚会，张奚若、吴晗、雷海宗均有演说。闻氏曾说：‘刚才张先生说辛亥革命是形式上的革命，五四是思想革命，正中下怀。中国这些旧东西我钻了十几年了，一个一个字都弄透了，愈弄就愈觉得“要不得”，现在我要和你们“里应外合”地把它打倒。’他又在某一次对友人说：人家见我终日读书，‘以为我是蠢虫，却不知我是杀蠹的芸香’，‘你想不到我比任何人还恨那故纸堆，正因恨它，更不能不弄个明白。’”夏曾佑、陈寅恪、闻一多的觉悟，都是真正深知“中华文化”后的觉悟。陈寅恪说：“中国书虽多，不过基本几十种而已，其他不过翻来覆去，东抄西抄。”俞大维“懊悔”当时没问陈寅恪“到底是哪几十种书”。我想，我这套《中国名著精华全集》的问世，已代他们解决了这个问题。由于我的精挑细选，我的确已“把中国的东西整理出一个定品”，我化腐朽为神奇，终于给中国人提供了一点披沙拣金的好处，“集”旧中国“天下之书为一书”，这真是源远流长的大功德了！
 
 1984年1月30日下午
-
-
 
 总类
 
@@ -449,8 +449,6 @@
 梁启超是神童，十三岁就考取秀才，十七岁就中了举人。十九岁起拜比他大十六岁的康有为做老师，学于广州万木草堂三年，对中学西学，有进步性的看法。二十二岁到北京，热心文化、政治活动。二十三岁联合各省举人一百九十人，上书论时局、请变法。二十四岁在上海办《时务报》。二十五岁到湖南讲学于时务学堂，做蔡锷等老师。二十六岁戊戌政变失败，逃往日本，几年之间，前后办《清议报》《新民丛报》等等，把古文体裁解放，文字生动感人，笔杆影响之大，无人可及。
 
 辛亥革命后，梁启超回国，北京万人空巷式的欢迎他。他创办《庸言》杂志，参加进步党，做过总长。1915年冒大险反对袁世凯称帝，参加护国战役。1917年又参加再造共和之役，虽与他老师康有为敌对，在所不惜。1918年后，专心在思想学术上归根，在导向工作方面，成绩极高。先后在北京高等师范、清华大学、天津南开大学、南京东南大学讲学。1929年误于庸医，死在北京。
-
-
 
 哲学类
 
@@ -818,8 +816,6 @@
 
 吕坤很得人佩服。明朝的吏部尚书孙丕扬，以八十老翁，“甘坐失举之罪”，保荐他做刑部尚书；在他死后，明熹宗追赠他做刑部尚书。清朝道光皇帝，甚至把他从祀在孔庙里。在旧道德的修养上，吕坤的成绩，的确可为典范。
 
-
-
 宗教类
 
 孟轲：《孟子》
@@ -925,8 +921,6 @@
 这是一本笔记，书名五个字中，有三个“寄”字，第一个“寄”字是他住处的名字，第二、三个“寄”字同义，第二个是动词，第三个是动名词做目的语用。他认为宇宙万物都有所“寄”，譬如日月星辰寄于天、人的五官寄于面，所以他的家叫“寄园”，他的笔记叫《寄园寄所寄》。这部笔记，是他人生如寄的一点成果。
 
 笔记是一种鸡零狗碎的札记式文体，在中国文学的地位很特殊，有记史的、有记掌故的、有记神怪的，内容十分复杂，涉及范围也很广泛。这本书也不例外。全书分为“囊底”“镜中”“倚杖”“撚须”“灭烛”“焚尘”“獭祭”“豕渡”“裂眥”“驱睡”“泛叶”“插菊”等十二“寄”，所记有正经的忠、孝、悌、义、正气、廉介，有孔丘所不语的鬼、怪、人妖，有指正“习语”“称谓”错误的文字，以及官场洋相中使人“乐然复笑，笑之中有箴规焉”的幽默故事。
-
-
 
 社会科学类
 
@@ -1242,8 +1236,6 @@
 
 从《盐铁论》一书里，我们可以看出中国人财经思想的水平，使我们知道中国人对财经问题的见解，不过如此。
 
-
-
 语文学类
 
 许慎：《说文》
@@ -1275,8 +1267,6 @@
 这就是中国第一部文法书的由来。
 
 马建忠另有《适可斋记言记行》一书，记录他救国的言论和为国家辛勤的日记。他在五十六岁时，为李鸿章连夜翻译俄国七千字的来电，突然热症死去。而他的哥哥马相伯（《马氏文通》的合著者），却活了一百岁。
-
-
 
 自然科学类
 
@@ -1342,8 +1332,6 @@
 
 吴大澂六十八岁死去。死前闹穷，以售书画、古铜器维生，著有《古玉图考》《古籀补》《权衡度量考》《恒轩古金录》《愙斋诗文集》。
 
-
-
 应用技术类
 
 叶德辉：《双梅景暗丛书》
@@ -1400,8 +1388,6 @@
 
 《齐民要术》的白话意思，就是民生重要方法。贾思勰以“君子所以仁育天下”之心，做了这部“王政之实”的大事，使我们深刻感到：在虚浮的中国著作里，毕竟还有有心人在做实事！
 
-
-
 艺术类
 
 顾恺之：《画评》
@@ -1441,8 +1427,6 @@
 关于棋术的书，历史上颇有不少。《隋书-经籍志》就有《碁势》五种、《碁图势》一种、《碁九品序录》一种、《碁后九品序》一种、《围碁品》一种、《碁品序》一种、《碁法》一种、《弹碁谱》一种。最值得注意的是：这些棋书，都收在四部分类中子部的兵类，并没把它们看成游艺的书。“兵者，所以禁暴静乱者也！”这些棋书，都是正经书呢！
 
 这本宋朝人晏天章的《元元棋经》，就是这样一部书，它和《孙子兵法》一样，也分十三篇，“有与兵法合者，亦附于中”。它写作的志趣，也就呼之欲出了。
-
-
 
 文学类
 
@@ -2054,8 +2038,6 @@
 
 《老残游记》是刘鹗戳破黑暗与伪善的伟大小说，是他四十八岁到五十一岁的作品。
 
-
-
 史地类
 
 左丘明：《左传》
@@ -2302,8 +2284,6 @@
 
 “桐城派”的文章，游记每被人忽视，我特别提出来，作为样板。
 
-
-
 《中国名著精华全集》序
 
 谈中国名著，得先谈中国书；谈中国书，得先谈中国的文字历史。
@@ -2501,6 +2481,3 @@
 ⑩古书的处理，由于现代印刷术的进步，在规格上，又不得不注意配合时代要求，线装薄面也罢、绸函丝订也好，早已都是落伍的玩艺，都不应该再予以考虑。在国际标准的图书馆中，甚至平装书都在不受庋藏之列，我们怎么能再抱残守缺，开时代倒车？所以无须采用旧式装订的方式，自无疑义。
 
 (11)在《中国历史演义全集》中，我配上图片，并且把每张图片加上活泼的说明，很受欢迎。这套《中国名著精华全集》也同样处理。图片中有的得来之不易，非细心而识货的中国人，就很难看出来。以配图中徐渭（文长）《青天歌卷》的首尾为例，《青天歌卷》在1966年江苏吴县东角直地方曹澄墓中出土。纸本，纵31.6厘米，长2036厘米，共七十四行。卷首有“许实善印”、“硻硻子”收藏章。卷后盖有“天池山人”、“青藤道士”章。这种十多年前才从坟里挖出来的文献，都被我用到了，这种“绝活”，总该令人绝倒吧？
-
-
-
