--- a/09.历史文化类/读史指南.md
+++ b/09.历史文化类/读史指南.md
@@ -1,13 +1,15 @@
-#《读史指南》目录
+# 读史指南
+
+<!-- toc -->
+
+## 目录
 
 * 一、四部备要暨四部丛刊书目対照表例
 * 二、《古今图书集成》研究
 * 三、介绍世界最大的百科全书
 * 四、中国历史演义总说
 
-
-
-##四部备要暨四部丛刊书目对照表例
+## 四部备要暨四部丛刊书目对照表例
 
 此对照表分二部，左列四部备要，右列四部丛刊，右随左而排列，故以四部备要为主。
 
@@ -1071,9 +1073,7 @@
 
 1982年岁暮
 
-
-
-##《古今图书集成》研究
+## 《古今图书集成》研究
 
 中国文化从有书籍开始，已两千年。两千年来，最有代表性的“大”书，举例如下：
 
@@ -1683,9 +1683,7 @@ L.翟理思这段文字的大错误在他根本不知道这部版本根本不是
 
 1964年9月
 
-
-
-##介绍世界最大的百科全书
+## 介绍世界最大的百科全书
 
 文星版《古今图书集成》是中国有史以来最大的百科全书，也是全世界有史以来最大的百科全书。比世界驰名的《大英百科全书》（EncyclopediaBritannica）在字数和册数上多四倍，在体积上多五倍。全书一万卷，一亿四千四百万字，在质量上，先从这些统计数字，你就不难了解它的惊人程度了！
 
@@ -1811,9 +1809,7 @@ L.翟理思这段文字的大错误在他根本不知道这部版本根本不是
 
 1968年3月
 
-
-
-##中国历史演义总说
+## 中国历史演义总说
 
 介绍《中国历史演义全集》
 
@@ -2110,6 +2106,3 @@ L.翟理思这段文字的大错误在他根本不知道这部版本根本不是
 有了这部大书，你可以翘起两脚，读得津津有味；你可以纵横上下，把古往今来从头说起；你可以变成渊博的人，加入“白头宫女谈天宝”“古董山人说晚明”的行列；你可以变成理智的爱国者——因为你真的透过它，了解了中国！
 
 1980年3月20日
-
-
-
